--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -4,7 +4,7 @@
 * 프로그램상에서 파일에 저장되어 있는 데이터를 참조하기 위해서는 프로그램과 파일 사이에 '스트림'을 형성해야 데이터를 주고 받을 수 있다. 여기서 **스트림(stream)은 데이터 이동의 경로가 되는 다리 역할을 한다.**
 파일과 스트림의 형성은 **운영체제에 의해서 그 구조가 결정되고 관리되는 대상**이다.
 
-#### 스트림의 형성을 요청하는 함수(fopen)
+#### 1. 스트림의 형성을 요청하는 함수(fopen)
 * 스트림을 형성할 때 호출하는 함수로서 프로그램상에서 파일과 스트림을 형성할 수 있다.
 * FILE구조체의 포인터를 이용해서 **파일에 데이터를 저장하거나 파일에 저장된 데이터를 읽는다.**
 ```cpp
@@ -15,7 +15,7 @@
 //FILE 구조체의 변수는 파일을 가리키는 '지시자'의 역할을 한다.
 FILE* fopen(const char* filename, const char* mode);
 ```
-#### 입력 스트림과 출력 스트림
+#### 2. 입력 스트림과 출력 스트림
 * 입력 스트림의 형성에 사용하는 **rt모드의 스트림**은 **텍스트 데이터를 읽기 위한 입력 스트림**을 뜻한다.
 * 출력 스트림의 형성에 사용하는 **wt모드의 스트림**은 **텍스트 데이터를 쓰기 위한 입력 스트림**을 뜻한다.
 
@@ -28,7 +28,7 @@ FILE* fp = fopen("data.txt", "rt");		//입력 스트림의 형성
 FILE* fp = fopen("C:\\Project\\data.txt","wt");
 ```
 
-#### 스트림의 소멸을 요청하는 함수(fclose)
+#### 3. 스트림의 소멸을 요청하는 함수(fclose)
 * fopen함수의 반대 기능으로서 fclose함수는 스트림을 해체할 때 호출하는 함수 또는 파일을 닫는 함수이다.
 
 ```cpp
@@ -37,14 +37,14 @@ FILE* fp = fopen("C:\\Project\\data.txt","wt");
 //성공 시 0, 실패 시 EOF를 반환
 int fclose(FILE* stream);
 ```
-#### fopen함수의 호출로 개방되었던 파일을 닫아줘야하는 이유
+##### fopen함수의 호출로 개방되었던 파일을 닫아줘야하는 이유
 
 * **운영체제가 할당한 자원의 반환**
   *  운영체제에 할당된 파일에 대한 자원(주로 메모리)은 **파일을 닫아주지 않으면 자원 손실을 초래**하기 때문에 fclose함수를 호출해서 <br/>자원을 반환한다.
 * **버퍼링 되었던 데이터의 출력**
   * 운영체제는 프로그램과 파일 사이에 입출력 버퍼를 둬서 성능의 향상을 도모하는데, **데이터**는 **출력버퍼에 저장되었다가 운영체제가 <br/>정해놓은 버퍼링 방식에 따라서 뒤늦게 파일에 저장**이 된다. 데이터 손실(프로그램의 오류)을 예방하기 위하여 **fclose함수의 호출**을<br/>통해 파일을 닫아주면 **출력 버퍼에 저장되어 있던 데이터가 파일로 이동하면서 출력버퍼는 비워지게 된다.**
 
-#### 출력버퍼를 비우는 함수(fflush) - [표준입출력함수 참고](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%8A%A4%ED%8A%B8%EB%A6%BC%EA%B3%BC_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%9D%B4%EB%8F%99.md#%ED%91%9C%EC%A4%80-%EC%9E%85%EC%B6%9C%EB%A0%A5-%ED%95%A8%EC%88%98)
+#### 5. 출력버퍼를 비우는 함수(fflush) - [표준입출력함수 참고](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%8A%A4%ED%8A%B8%EB%A6%BC%EA%B3%BC_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%9D%B4%EB%8F%99.md#%ED%91%9C%EC%A4%80-%EC%9E%85%EC%B6%9C%EB%A0%A5-%ED%95%A8%EC%88%98)
 * **fflush함수**는 **출력버퍼를 비우는 함수**로서 출력버퍼를 비운다는 것은 **출력버퍼에 저장된 데이터를 목적지로 전송한다**는 의미를 가진다.
 * 입력버퍼를 비운다는 것은 입력버퍼에 저장된 데이터를 소멸시킨다는 의미이지만, fflush함수는 입력버퍼를 대상으로 호출할 수 없다.
 * 파일에 저장된 데이터는 **원할 때 언제든지 읽을 수 있을 뿐만 아니라 파일 대상의 입력버퍼를 비워야만 하는 상황이라는 것이 특별히 <br/>존재하지 않기 때문에** 파일 스트림의 입력버퍼를 비우는 함수가 필요가 없다.**(읽혀진 데이터는 입력버퍼에서 지워진다)**
@@ -58,14 +58,16 @@ int fflush(FILE* stream);
 
 ### 파일의 개방 모드(Mode)
 
-#### 스트림을 구분하는 기준1
+#### 1. 스트림을 구분하는 기준1
 데이터의 이동방향을 기준으로 네 가지로 구분한다.
 
-* 데이터 READ 스트림		    	읽기만 가능
-* 데이터 WRITE 스트림		   	쓰기만 가능
-* 데이터 APPEND 스트림	   	쓰되 덧붙여 쓰기만 가능
-* 데이터 READ/WRITE 스트림	읽기, 쓰기 모두 가능
 
+1) 데이터 READ 스트림 -- 읽기만 가능
+2) 데이터 WRITE 스트림	-- 쓰기만 가능
+3) 데이터 APPEND 스트림	--	쓰되 덧붙여 쓰기만 가능
+4) 데이터 READ/WRITE 스트림 --	읽기, 쓰기 모두 가능
+
+* 스트림을 세분화한 성격 6가지
 
 |모드(mode)|스트림의 성격|파일이 없으면?|
 |:-:|:-|:-:|
@@ -75,6 +77,36 @@ int fflush(FILE* stream);
 |r+|읽기/쓰기 가능|에러|
 |w+|읽기/쓰기 가능|생성|
 |a+|읽기/덧붙여 쓰기 가능|생성|
+
+* 모드의 +는 읽기, 쓰기가 모두 가능한 스트림의 형성을 의미한다.
+* 모드의 a는 쓰기가 가능한 스트림을 형성하는데, 여기서 말하는 쓰기는 덧붙이기이다.
+
+#### 2. 스트림을 구분하는 기준2
+파일에 담을 수 있는 데이터들의 유형으로 구분한다.
+
+1) 사람이 인식할 수 있는 문자를 담고 있는 파일  **텍스트 파일(text file)**	
+2) 컴퓨터가 인식할 수 있는 데이터를 담고 있는 파일		**바이너리 파일(binary file)**
+
+* 텍스트 파일은 **텍스트 모드로 개방하면 운영체제에 따라 형태의 변환이 자동**으로 이뤄진다. 그리고 텍스트 모드의 파일 개방을 위해서는 **fopen함수의 두 번째 인자로 t를 붙어야 한다.** 개방모드에 **t와 b도 붙여주지 않으면 파일은 텍스트 모드로 개방**된다.
+
+```
+C프로그램 : \n	--> \r\n(파일)
+파일 : \r\n     --> \n(C프로그램)
+개방하기 위한 조건 : rt, wt, at, r+t(rt+), w+t(wt+), a+t(at+)
+```
+
+* **바이너리 데이터를 저장하고 있는 파일은 형태 변환이 일어나면 안되기 때문에 바이너리 모드로 개방**해야 한다. 그리고 바이너리 모드의 파일 개방을 위해서는 **fopen함수의 두 번째 인자로 b를 붙어야 한다.**
+
+```
+개방하기 위한 조건 : rb, wb, ab, r+b(rb+), w+b(wb+), a+b(ab+)
+```
+
+##### 운영체제에 따른 파일 내 개행
+
+* MS-DOS(window)의 파일 내 개행		\r\n(나란히 등장)
+* Mac(Mackintosh)의 파일 내 개행		\r
+* Unix 계열의 파일 내 개행			\n
+* C언어의 파일 내 개행				\n
 
 
 
