--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -102,6 +102,7 @@ C프로그램 : \n	--> \r\n(파일)
 ```
 
 ##### 운영체제에 따른 파일 내 개행
+**문자열이 파일에 저장될 때에는 문자열의 끝을 의미하는 널 문자는 저장되지 않는다.** 때문에 파일에서는 개행을 기준으로 문자열을 구분한다.<br>따라서 fgets함수의 호출을 통해서 **읽어 들일 문자열의 끝에는 반드시 \n문자가 존재해야 한다.**
 
 * MS-DOS(window)의 파일 내 개행		\r\n(나란히 등장)
 * Mac(Mackintosh)의 파일 내 개행		\r
