--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -109,5 +109,42 @@ C프로그램 : \n	--> \r\n(파일)
 * Unix 계열의 파일 내 개행			\n
 * C언어의 파일 내 개행				\n
 
+#### feof함수 기반의 파일복사 프로그램
+* feof함수는 파일의 끝을 확인하는 목적으로 정의된 함수이다. 이 함수는 인자로 전달된 FILE구조체의 포인터를 대상으로, **더 이상 읽어 들일 데이터가 존재하지 않으면 0이 아닌 값을 반환**한다.
 
+```cpp
+#include <stdio.h>
+
+//파일의 끝에 도달한 경우 0이 아닌 값 반환
+int feof(FILE* stream);
+```
+
+* fget함수는 파일의 끝을 도달하거나 함수호출 실패 시 EOF 반환하므로 **파일복사의 성공을 확인 하기위해 feof함수를 호출**한다.
+
+```cpp
+int main()
+{
+	FILE* src = fopen("src.txt", "rt");//파일 읽기모드
+	FILE* des = fopen("des.txt", "wt");//파일 쓰기모드
+	int ch;
+
+	if(src == NULL || des == NULL)
+	{
+		puts("파일오픈 실패!");
+		return -1;
+	}//파일에 대한 값이 없으면 -1 반환
+	
+	//변수 ch(fget(src))가 EOF를 반환할 때까지 반복문 실행
+	while((ch = fgetc(src))! = EOF)
+		fputc(ch, des);//변수 ch에 있는 파일의 내용을 한문자씩 des에 파일 복사
+
+	if(feof(src) != 0)
+		puts("파일복사 완료!");
+	else
+		puts("파일복사 실패!");
+
+	fclose(src);
+	fclose(des);
+}
+```
 
