--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -84,8 +84,8 @@ int fflush(FILE* stream);
 #### 2. 스트림을 구분하는 기준2
 파일에 담을 수 있는 데이터들의 유형으로 구분한다.
 
-1) 사람이 인식할 수 있는 문자를 담고 있는 파일  **텍스트 파일(text file)**	
-2) 컴퓨터가 인식할 수 있는 데이터를 담고 있는 파일		**바이너리 파일(binary file)**
+1) 사람이 인식할 수 있는 문자를 담고 있는 파일 - **텍스트 파일(text file, 파일이름.txt)**	
+2) 컴퓨터가 인식할 수 있는 데이터를 담고 있는 파일 - **바이너리 파일(binary file, 파일이름.bin))**
 
 * 텍스트 파일은 **텍스트 모드로 개방하면 운영체제에 따라 형태의 변환이 자동**으로 이뤄진다. 그리고 텍스트 모드의 파일 개방을 위해서는 **fopen함수의 두 번째 인자로 t를 붙어야 한다.** 개방모드에 **t와 b도 붙여주지 않으면 파일은 텍스트 모드로 개방**된다.
 
@@ -147,4 +147,36 @@ int main()
 	fclose(des);
 }
 ```
+
+#### 바이너리 데이터의 입출력(fread, fwrite) 
+* **fread 함수**는 **두 번째 인자와 세 번째 전달인자의 곱의 바이트 크기만큼 데이터를 읽어 들이는 함수**이다(네 번째 인자로부터 요청한 분량의 데이터를 읽고 첫 번째 인자에 저장).
+* 이 함수는 호출이 성공하고 **요청한 분량의 데이터가 모두 읽혀지면 count로 반환**하고, 호출이 성공했지만 파일의 끝에 도달해서 **요청한 <br/>분량의 데이터를 모두 읽어 들이지 못했거나 오류가 발생하는 경우**에는 **count보다 작은 값 반환**한다.
+
+```cpp
+#include <stdio.h>
+
+//성공 시 전달인자 count, 실패 또는 파일의 끝 도달 시 count보다 작은 값 반환
+size_t fread(void* buffer, size_t size, size_t count, FILE* stream);
+
+//sizeof(int)크기의 데이터 12개를 fp로부터 읽어 들어서 배열 buf에 저장
+int buf[12];
+fread((void*)buf, sizeof(int), 12, fp);//fp는 FILE 구조체 포인터
+```
+
+* fwrite 함수는 **fread 함수와 같이 데이터를 읽어 들이는 함수**이다(첫 번째 인자로부터 요청한 분량의 데이터를 읽고 네 번째 인자에 저장).
+
+```cpp
+#include <stdio.h>
+
+//성공 시 전달인자 count, 실패 시 count보다 작은 값 반환
+size_t fwrite(const void* buffer,size_t size, size_t count, FILE* stream);
+
+//sizeof(int) 크기의 데이터 7개를 buf로부터 읽어서 fp에 저장
+int buf[7] = {1, 2, 3, 4, 5, 6, 7};
+fwrite((void*)buf, sizeof(int), 7, fp);//fp는 FILE 구조체 포인터
+```
+
+
+
+
 
