--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -176,6 +176,10 @@ int buf[7] = {1, 2, 3, 4, 5, 6, 7};
 fwrite((void*)buf, sizeof(int), 7, fp);//fp는 FILE 구조체 포인터
 ```
 
+* 파일 입출력에 가장 기본이 되는 성격
+
+1. READ / WRITE를 동시에 진행해야 한다.
+2. 파일의 끝에 도달했는지를 확인해야 한다.
 
 
 
