--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -84,8 +84,8 @@ int fflush(FILE* stream);
 #### 2. 스트림을 구분하는 기준2
 파일에 담을 수 있는 데이터들의 유형으로 구분한다.
 
-1) 사람이 인식할 수 있는 문자를 담고 있는 파일(문자, 문자열 등등) - **텍스트 파일(text file, 파일이름.txt)**	
-2) 컴퓨터가 인식할 수 있는 데이터를 담고 있는 파일(정수, 실수 등등) - **바이너리 파일(binary file, 파일이름.bin))**
+1) 사람이 인식할 수 있는 문자를 담고 있는 파일(문자, 문자열 등) - **텍스트 파일(text file, 파일이름.txt)**	
+2) 컴퓨터가 인식할 수 있는 데이터를 담고 있는 파일(정수, 실수 등) - **바이너리 파일(binary file, 파일이름.bin))**
 
 * 텍스트 파일은 **텍스트 모드로 개방하면 운영체제에 따라 형태의 변환이 자동**으로 이뤄진다. 그리고 텍스트 모드의 파일 개방을 위해서는 **fopen함수의 두 번째 인자로 t를 붙어야 한다.** 개방모드에 **t와 b도 붙여주지 않으면 파일은 텍스트 모드로 개방**된다.
 
