--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -181,6 +181,23 @@ fwrite((void*)buf, sizeof(int), 7, fp);//fp는 FILE 구조체 포인터
 1. READ / WRITE를 동시에 진행해야 한다.
 2. 파일의 끝에 도달했는지를 확인해야 한다.
 
+#### 서식에 따른 데이터 입출력(fprintf, fscanf)
+텍스트 데이터와 바이너리 데이터를 동시에 입출력 해야 하는 상황에서 사용하는 함수이다.
 
+```cpp
+#include <stdio.h>
+
+//첫 번째 전달인자는 FILE구조체의 포인터, 두 번째 이후의 전달인자를 통해서 문자열 작성
+//format문자열은 다양한 자료형 변수를 문자열로 변환하는 방식을 지정해주는 형식 문자열
+fprintf(FILE* const stream, const char* const Format, ...);
+fscanf(FILE* const stream, const char* const Format, ...);
+
+//예시
+char name[10] = "홍길동";
+char sex = 'M';
+int age = 24;
+fprintf(fp, "%s, %c, %d", name, sex, age);		//fp는 FILE 구조체 포인터
+
+```
 
 
