--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -182,22 +182,51 @@ fwrite((void*)buf, sizeof(int), 7, fp);//fp는 FILE 구조체 포인터
 2. 파일의 끝에 도달했는지를 확인해야 한다.
 
 #### 서식에 따른 데이터 입출력(fprintf, fscanf)
-텍스트 데이터와 바이너리 데이터를 동시에 입출력 해야 하는 상황에서 사용하는 함수이다.
+* 텍스트 데이터와 바이너리 데이터를 동시에 입출력 해야 하는 상황에서 사용하는 함수이다.
+* fprintf 함수는 파일에 데이터를 저장할 때 사용하고, fscanf 함수는 파일에서 데이터를 불러올 때 사용한다.
 
 ```cpp
 #include <stdio.h>
 
-//첫 번째 전달인자는 FILE구조체의 포인터, 두 번째 이후의 전달인자를 통해서 문자열 작성
+//첫 번째 전달인자는 데이터를 저장할 FILE구조체의 포인터, 두 번째 이후의 전달인자를 통해서 문자열 작성
 //format문자열은 다양한 자료형 변수를 문자열로 변환하는 방식을 지정해주는 형식 문자열
 fprintf(FILE* const stream, const char* const Format, ...);
+
+//첫 번째 전달인자는 데이터를 불러올 FILE구조체의 포인터, 두 번째 이후의 전달인자를 통해서 문자열 호출
 fscanf(FILE* const stream, const char* const Format, ...);
+```
 
-//예시
-char name[10] = "홍길동";
-char sex = 'M';
-int age = 24;
-fprintf(fp, "%s, %c, %d", name, sex, age);		//fp는 FILE 구조체 포인터
+```cpp
+//fprintf 함수 예시
+char name[10];
+char sex;
+int age;
 
+FILE* fp = fopen("test.txt", "wt");
+
+scanf("%s, %c, %d", name, &sex, &age);
+getchar();//입력버퍼에 남아있는 \n을 소멸
+fprintf(fp, "%s, %c, %d", name, sex, age);
+
+fclose(fp);
+
+
+//fscanf 함수 예시
+char name[10];
+char sex;
+int age;
+
+FILE* fp = fopen("test.txt", "rt");
+int ret;
+
+while(1)
+{
+	ret = fscanf(fp, "%s, %c, %d", name, &sex, &age);
+	if(ret == EOF)
+		break;//fscanf 함수가 파일의 끝에 도달하거나 오류가 발생하면 EOF 반환
+	printf("%s, %c, %d", name, sex, age);
+}
+fclose(fp);
 ```
 
 
