--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -228,5 +228,27 @@ while(1)
 }
 fclose(fp);
 ```
+* 텍스트와 바이너리 데이터의 집합체인 구조체 변수는 파일 입출력할 경우 하나의 바이너리 데이터로 인식하고 처리할 수 있다(fwrite함수를 통해서 통째로 저장하고 fread 함수를 통해서 통째로 복원가능).
 
+
+#### 파일 위치 지시자
+* FILE 구조체에서 파일의 위치 정보를 저장하고 있는 멤버로서 fgets, fputs 또는 fread, fwrite와 같은 함수가 호출될 때마다 참조 및 갱신된다.
+* 파일이 처음 개방되면 무조건 파일의 맨 앞부분을 가리키므로 파일의 중간 혹은 마지막 부문에서부터 데이터를 읽거나 쓰기 원한다면 파일 위치 지시자를 이동시켜야 한다.
+
+**파일 위치 지시자 이동함수(fseek)**<br/>
+이 함수를 호출하면 파일 위치 지시자를 원하는 곳으로 이동시킬 수 있다.
+
+```cpp
+#include <stdio.h>
+
+//성공 시 0, 실패 시 0이 아닌 값을 반환
+//개방한 파일(stream)에서 파일 위치 지시자를 지정한 위치(wherefrom)에서부터 크기(offset) 바이트만큼 이동
+int fseek(FILE* stream, long offset, int wherefrom);
+```
+
+|매개변수 wherefrom|파일 위치|
+|-|-|
+|SEEK_SET(0)|파일 맨 앞에서부터 이동을 시작|
+|SEEK_CUR(1)|현재 위치에서부터 이동을 시작|
+|SEEK_END(2)|파일 맨 끝(EOF)에서부터 이동을 시작|
 
