--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -109,7 +109,7 @@ C프로그램 : \n	--> \r\n(파일)
 * Unix 계열의 파일 내 개행			\n
 * C언어의 파일 내 개행				\n
 
-#### feof함수 기반의 파일복사 프로그램
+#### 3.feof함수 기반의 파일복사 프로그램
 * feof함수는 파일의 끝을 확인하는 목적으로 정의된 함수이다. 이 함수는 인자로 전달된 FILE구조체의 포인터를 대상으로, **더 이상 읽어 들일 데이터가 존재하지 않으면 0이 아닌 값을 반환**한다.
 
 ```cpp
@@ -148,7 +148,7 @@ int main()
 }
 ```
 
-#### 바이너리 데이터의 입출력(fread, fwrite) 
+#### 4.바이너리 데이터의 입출력(fread, fwrite) 
 * **fread 함수**는 **두 번째 인자와 세 번째 전달인자의 곱의 바이트 크기만큼 데이터를 읽어 들이는 함수**이다(네 번째 인자로부터 요청한 분량의 데이터를 읽고 첫 번째 인자에 저장).
 * 이 함수는 호출이 성공하고 **요청한 분량의 데이터가 모두 읽혀지면 count로 반환**하고, 호출이 성공했지만 파일의 끝에 도달해서 **요청한 <br/>분량의 데이터를 모두 읽어 들이지 못했거나 오류가 발생하는 경우**에는 **count보다 작은 값 반환**한다.
 
@@ -181,7 +181,7 @@ fwrite((void*)buf, sizeof(int), 7, fp);//fp는 FILE 구조체 포인터
 1. READ / WRITE를 동시에 진행해야 한다.
 2. 파일의 끝에 도달했는지를 확인해야 한다.
 
-#### 서식에 따른 데이터 입출력(fprintf, fscanf)
+#### 5.서식에 따른 데이터 입출력(fprintf, fscanf)
 * 텍스트 데이터와 바이너리 데이터를 동시에 입출력 해야 하는 상황에서 사용하는 함수이다.
 * fprintf 함수는 파일에 데이터를 저장할 때 사용하고, fscanf 함수는 파일에서 데이터를 불러올 때 사용한다.
 
@@ -231,7 +231,7 @@ fclose(fp);
 * 텍스트와 바이너리 데이터의 집합체인 구조체 변수는 파일 입출력할 경우 하나의 바이너리 데이터로 인식하고 처리할 수 있다(fwrite함수를 통해서 통째로 저장하고 fread 함수를 통해서 통째로 복원가능).
 
 
-#### 파일 위치 지시자
+#### 6.파일 위치 지시자
 * FILE 구조체에서 파일의 위치 정보를 저장하고 있는 멤버로서 fgets, fputs 또는 fread, fwrite와 같은 함수가 호출될 때마다 참조 및 갱신된다.
 * 파일이 처음 개방되면 무조건 파일의 맨 앞부분을 가리키므로 파일의 중간 혹은 마지막 부문에서부터 데이터를 읽거나 쓰기 원한다면 파일 위치 지시자를 이동시켜야 한다.
 
