--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -235,8 +235,10 @@ fclose(fp);
 * FILE 구조체에서 파일의 위치 정보를 저장하고 있는 멤버로서 fgets, fputs 또는 fread, fwrite와 같은 함수가 호출될 때마다 참조 및 갱신된다.
 * 파일이 처음 개방되면 무조건 파일의 맨 앞부분을 가리키므로 파일의 중간 혹은 마지막 부문에서부터 데이터를 읽거나 쓰기 원한다면 파일 위치 지시자를 이동시켜야 한다.
 
-**파일 위치 지시자 이동함수(fseek)**<br/>
-이 함수를 호출하면 파일 위치 지시자를 원하는 곳으로 이동시킬 수 있다.
+**파일 위치 지시자 이동함수(fseek)** <br/>
+* 이 함수를 호출하면 파일 위치 지시자를 원하는 곳으로 이동시킬 수 있다.
+* 매개변수 offset에는 양의 정수뿐만 아니라 음의 정수도 전달 가능.
+* 파일 위치 지시자는 양의 정수가 전달되면 증가(파일 끝을 향해 값만큼 이동), 음의 정수가 전달되면 감소(파일 시작을 향해 값만큼 이동)
 
 ```cpp
 #include <stdio.h>
@@ -251,4 +253,6 @@ int fseek(FILE* stream, long offset, int wherefrom);
 |SEEK_SET(0)|파일 맨 앞에서부터 이동을 시작|
 |SEEK_CUR(1)|현재 위치에서부터 이동을 시작|
 |SEEK_END(2)|파일 맨 끝(EOF)에서부터 이동을 시작|
+
+
 
