--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -44,7 +44,7 @@ int fclose(FILE* stream);
 * **버퍼링 되었던 데이터의 출력**
   * 운영체제는 프로그램과 파일 사이에 입출력 버퍼를 둬서 성능의 향상을 도모하는데, **데이터**는 **출력버퍼에 저장되었다가 운영체제가 <br/>정해놓은 버퍼링 방식에 따라서 뒤늦게 파일에 저장**이 된다. 데이터 손실(프로그램의 오류)을 예방하기 위하여 **fclose함수의 호출**을<br/>통해 파일을 닫아주면 **출력 버퍼에 저장되어 있던 데이터가 파일로 이동하면서 출력버퍼는 비워지게 된다.**
 
-#### 5. 출력버퍼를 비우는 함수(fflush) - [표준입출력함수 참고](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%8A%A4%ED%8A%B8%EB%A6%BC%EA%B3%BC_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%9D%B4%EB%8F%99.md#%ED%91%9C%EC%A4%80-%EC%9E%85%EC%B6%9C%EB%A0%A5-%ED%95%A8%EC%88%98)
+#### 4. 출력버퍼를 비우는 함수(fflush) - [표준입출력함수 참고](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%8A%A4%ED%8A%B8%EB%A6%BC%EA%B3%BC_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%9D%B4%EB%8F%99.md#%ED%91%9C%EC%A4%80-%EC%9E%85%EC%B6%9C%EB%A0%A5-%ED%95%A8%EC%88%98)
 * **fflush함수**는 **출력버퍼를 비우는 함수**로서 출력버퍼를 비운다는 것은 **출력버퍼에 저장된 데이터를 목적지로 전송한다**는 의미를 가진다.
 * 입력버퍼를 비운다는 것은 입력버퍼에 저장된 데이터를 소멸시킨다는 의미이지만, fflush함수는 입력버퍼를 대상으로 호출할 수 없다.
 * 파일에 저장된 데이터는 **원할 때 언제든지 읽을 수 있을 뿐만 아니라 파일 대상의 입력버퍼를 비워야만 하는 상황이라는 것이 특별히 <br/>존재하지 않기 때문에** 파일 스트림의 입력버퍼를 비우는 함수가 필요가 없다.**(읽혀진 데이터는 입력버퍼에서 지워진다)**
@@ -109,7 +109,7 @@ C프로그램 : \n	--> \r\n(파일)
 * Unix 계열의 파일 내 개행			\n
 * C언어의 파일 내 개행				\n
 
-#### 3.feof함수 기반의 파일복사 프로그램
+#### 3. feof함수 기반의 파일복사 프로그램
 * feof함수는 파일의 끝을 확인하는 목적으로 정의된 함수이다. 이 함수는 인자로 전달된 FILE구조체의 포인터를 대상으로, **더 이상 읽어 들일 데이터가 존재하지 않으면 0이 아닌 값을 반환**한다.
 
 ```cpp
@@ -148,7 +148,7 @@ int main()
 }
 ```
 
-#### 4.바이너리 데이터의 입출력(fread, fwrite) 
+#### 4. 바이너리 데이터의 입출력(fread, fwrite) 
 * **fread 함수**는 **두 번째 인자와 세 번째 전달인자의 곱의 바이트 크기만큼 데이터를 읽어 들이는 함수**이다(네 번째 인자로부터 요청한 분량의 데이터를 읽고 첫 번째 인자에 저장).
 * 이 함수는 호출이 성공하고 **요청한 분량의 데이터가 모두 읽혀지면 count로 반환**하고, 호출이 성공했지만 파일의 끝에 도달해서 **요청한 <br/>분량의 데이터를 모두 읽어 들이지 못했거나 오류가 발생하는 경우**에는 **count보다 작은 값 반환**한다.
 
@@ -181,7 +181,7 @@ fwrite((void*)buf, sizeof(int), 7, fp);//fp는 FILE 구조체 포인터
 1. READ / WRITE를 동시에 진행해야 한다.
 2. 파일의 끝에 도달했는지를 확인해야 한다.
 
-#### 5.서식에 따른 데이터 입출력(fprintf, fscanf)
+#### 5. 서식에 따른 데이터 입출력(fprintf, fscanf)
 * 텍스트 데이터와 바이너리 데이터를 동시에 입출력 해야 하는 상황에서 사용하는 함수이다.
 * fprintf 함수는 파일에 데이터를 저장할 때 사용하고, fscanf 함수는 파일에서 데이터를 불러올 때 사용한다.
 
@@ -231,11 +231,11 @@ fclose(fp);
 * 텍스트와 바이너리 데이터의 집합체인 구조체 변수는 파일 입출력할 경우 하나의 바이너리 데이터로 인식하고 처리할 수 있다(fwrite함수를 통해서 통째로 저장하고 fread 함수를 통해서 통째로 복원가능).
 
 
-#### 6.파일 위치 지시자
+### 파일 위치 지시자
 * FILE 구조체에서 파일의 위치 정보를 저장하고 있는 멤버로서 fgets, fputs 또는 fread, fwrite와 같은 함수가 호출될 때마다 참조 및 갱신된다.
 * 파일이 처음 개방되면 무조건 파일의 맨 앞부분을 가리키므로 파일의 중간 혹은 마지막 부문에서부터 데이터를 읽거나 쓰기 원한다면 파일 위치 지시자를 이동시켜야 한다.
 
-**파일 위치 지시자 이동함수(fseek)** <br/>
+#### 1. 파일 위치 지시자 이동함수(fseek)
 * 이 함수를 호출하면 파일 위치 지시자를 원하는 곳으로 이동시킬 수 있다.
 * 매개변수 offset에는 양의 정수뿐만 아니라 음의 정수도 전달 가능.
 * 파일 위치 지시자는 양의 정수가 전달되면 증가(파일 끝을 향해 값만큼 이동), 음의 정수가 전달되면 감소(파일 시작을 향해 값만큼 이동)
