--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -254,5 +254,13 @@ int fseek(FILE* stream, long offset, int wherefrom);
 |SEEK_CUR(1)|현재 위치에서부터 이동을 시작|
 |SEEK_END(2)|파일 맨 끝(EOF)에서부터 이동을 시작|
 
+#### 2. 파일 위치 지시자에 대한 위치정보함수(ftell)
+파일 위치 지시자의 위치 정보를 반환하는 함수로서 반환되는 값은 파일의 시작 부분에서부터 현재 위치까지의 바이트 수를 말한다(첫 번째 바이트는 0부터 시작).
 
+```cpp
+#include <stdio.h>
+
+//파일 위치 지시자의 위치 정보 반환
+long ftell(FILE* stream);
+```
 
