--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -262,5 +262,25 @@ int fseek(FILE* stream, long offset, int wherefrom);
 
 //파일 위치 지시자의 위치 정보 반환
 long ftell(FILE* stream);
+//예시
+
+//파일 생성
+FILE* fp = fopen("text.txt","wt");	//텍스트 파일(쓰기) 개방(생성)
+fputs("1234-", fp);	//텍스트 파일 내용 입력
+fclose(fp);	//텍스트 파일 닫기
+
+//파일 개방
+fp = fopen("text.txt","rt");	//텍스트 파일(읽기) 개방
+
+for(long fpos, int i = 0 ; i < 4 ; i++)
+{
+	putchar(fgetc(fp));	//텍스트 파일 문자 출력
+	fpos = ftell(fp);	//fp에 대한 위치 정보 반환 및 선언
+	fseek(fp, -1, SEEK_END);	//파일 위치 지시자를 문자'-'로 이동
+	putchar(fgetc(fp));	//텍스트 파일 문자 출력
+	fseek(fp, fpos, SEEK_SET);	//파일 위치 지시자를 fpos위치로 이동
+}	
+fclose(fp);	//텍스트 파일 닫기
+
 ```
 
