--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -263,6 +263,10 @@ int fseek(FILE* stream, long offset, int wherefrom);
 //파일 위치 지시자의 위치 정보 반환
 long ftell(FILE* stream);
 
+//파일에 대한 바이트 크기 구하기
+fseek(FILE* stream, 0, SEEK_END);	//파일 끝으로 위치 지시자 이동
+long fpos = ftell(FILE* stream);	//파일에 대한 위치 지시자의 위치 정보를 반환하여 바이트 크기 계산;
+
 /*예시
 //파일 생성
 FILE* fp = fopen("text.txt","wt");	//텍스트 파일(쓰기) 개방(생성)
