--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -5,9 +5,17 @@
 
 
 
-##### 1.코드 영역(Code Area)
+1.코드 영역(Code Area)<br/>
+실행할 프로그램의 코드가 저장되는 메모리 공간. CPU는 코드 영역에 저장된 명령문들을 하나씩 가져가서 실행.
 
+2.데이터 영역(Data Area)<br/>
+전역변수와 static변수가 할당되는 메모리 공간. 전역변수와 static변수가 선언되면 이 영역에 프로그램의 시작과 동시에 할당되어 프로그램 종료 시까지 남아있게 된다는 특징을 가지고 있다.
 
+3.스택 영역(stack Area)<br/>
+지역변수와 매개변수가 할당되는 메모리 공간. 이 영역에 할당되는 변수들은 선언된 함수를 빠져나가면 소멸된다는 특징이 있다.
+
+4.힙 영역(Heap Area)<br/>
+프로그래머가 원하는 시점에 할당하고 소멸할 수 있는 변수들이 할당되는 메모리 공간. 
 
 
 
