--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -15,9 +15,17 @@
 지역변수와 매개변수가 할당되는 메모리 공간. 이 영역에 할당되는 변수들은 선언된 함수를 빠져나가면 소멸된다는 특징이 있다.
 
 4.힙 영역(Heap Area)<br/>
-프로그래머가 원하는 시점에 할당하고 소멸할 수 있는 변수들이 할당되는 메모리 공간. 
+프로그래머가 원하는 시점에 할당하고 소멸할 수 있는 변수들 또는 생성과 소멸의 시기가 지역변수나 전역변수와 다른 유형의 변수들이 할당되는 메모리 공간. malloc과 free함수를 통해 입 영역에 할당하고 소멸할 수 있다.
 
+힙 영역의(malloc과 free함수)
 
+```cpp
+#include <stdio.h>
+
+//malloc함수는 성공 시 할당된 메모리의 주소값, 실패 시 NULL 반환
+void* malloc(size_t size);	//힙 영역으로의 메모리 공간 할당
+void free(void* ptr);	//힙 영역에 할당된 메모리 공간 해제
+```
 
 
 
