--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -5,19 +5,21 @@
 
 
 
-1.코드 영역(Code Area)<br/>
+##### 1.코드 영역(Code Area)<br/>
 실행할 프로그램의 코드가 저장되는 메모리 공간. CPU는 코드 영역에 저장된 명령문들을 하나씩 가져가서 실행.
 
-2.데이터 영역(Data Area)<br/>
+##### 2.데이터 영역(Data Area)<br/>
 전역변수와 static변수가 할당되는 메모리 공간. 전역변수와 static변수가 선언되면 이 영역에 프로그램의 시작과 동시에 할당되어 프로그램 종료 시까지 남아있게 된다는 특징을 가지고 있다.
 
-3.스택 영역(stack Area)<br/>
+##### 3.스택 영역(stack Area)<br/>
 지역변수와 매개변수가 할당되는 메모리 공간. 이 영역에 할당되는 변수들은 선언된 함수를 빠져나가면 소멸된다는 특징이 있다.
 
-4.힙 영역(Heap Area)<br/>
+##### 4.힙 영역(Heap Area)<br/>
 프로그래머가 원하는 시점에 할당하고 소멸할 수 있는 변수들 또는 생성과 소멸의 시기가 지역변수나 전역변수와 다른 유형의 변수들이 할당되는 메모리 공간. malloc과 free함수를 통해 입 영역에 할당하고 소멸할 수 있다.
 
-힙 영역의(malloc과 free함수)
+##### 5.힙 영역의 메모리 공간 할당과 해제(malloc과 free함수)
+* 프로그램상에서 malloc 함수호출로 할당된 메모리 공간은 프로그래머가 직접 free 함수의 호출을 통해 해제할 때까지 계속 존재
+* malloc 함수의 반환형은 void형 포인터로서 void형으로 반환되는 주소 값을 적절히 형 변환해서 할당된 힙 영역 메모리 공간에 접근
 
 ```cpp
 #include <stdio.h>
@@ -25,6 +27,26 @@
 //malloc함수는 성공 시 할당된 메모리의 주소값, 실패 시 NULL 반환
 void* malloc(size_t size);	//힙 영역으로의 메모리 공간 할당
 void free(void* ptr);	//힙 영역에 할당된 메모리 공간 해제
+
+//예시
+void* ptr1 = malloc(4);		//4바이트가 힙 영역에 할당
+void* ptr2 = malloc(sizeof(int));		//int형 변수 크기의 메모리 공간 할당
+void* ptr3 = malloc(sizeof(double));	//double형 변수 크기의 메모리 공간 할당
+void* ptr4 = malloc(sizeof(int)*7);		//길이가 7인 int형 배열로 사용할 공간 마련
+
+free(ptr1);		//ptr1이 가리키는 4바이트 메모리 공간 해제
+free(ptr2);
+free(ptr3);
+free(ptr4);
+
+//형변환
+int* ptr1 = (int*)malloc(sizeof(int));
+double* ptr2 = (double*)malloc(sizeof(double));
+int* ptr3 = (int*)malloc(sizeof(int)*7)
+
+free(ptr1);
+free(ptr2);
+free(ptr3);
 ```
 
 
