--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -20,7 +20,8 @@
 ##### 5.힙 영역의 메모리 공간 할당과 해제(malloc과 free함수)
 * 프로그램상에서 malloc 함수호출로 할당된 메모리 공간은 프로그래머가 직접 free 함수의 호출을 통해 해제할 때까지 계속 존재
 * malloc 함수의 반환형은 void형 포인터로서 void형으로 반환되는 주소 값을 적절히 형 변환해서 할당된 힙 영역 메모리 공간에 접근
-
+* malloc 함수의 호출을 통한 메모리 공간의 할당을 가리켜 '동적할당(dynamic allocation)'이라 한다.
+  
 ```cpp
 #include <stdio.h>
 
@@ -49,6 +50,8 @@ free(ptr2);
 free(ptr3);
 ```
 
+* 동적할당이 필요한 이유
+  * 그때그때 필요한 만큼만 메모리 공간을 확보하고 다 사용했다면 free 시켜 줌으로써 메모리 공간을 해제함으로서 한정된 메모리 공간을 효율적으로 사용할 수 있게 되는것이다.<br/>(컴파일 시 할당에 필요한 메모리 공간이 계산되지 않고, 실행 시 할당에 필요한 메모리 공간이 계산)
 
 
 
