--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -21,7 +21,8 @@
 * 프로그램상에서 malloc 함수호출로 할당된 메모리 공간은 프로그래머가 직접 free 함수의 호출을 통해 해제할 때까지 계속 존재
 * malloc 함수의 반환형은 void형 포인터로서 void형으로 반환되는 주소 값을 적절히 형 변환해서 할당된 힙 영역 메모리 공간에 접근
 * malloc 함수의 호출을 통한 메모리 공간의 할당을 가리켜 '동적할당(dynamic allocation)'이라 한다.
-  
+* 프로그램 실행 시 할당된 모든 메모리 공간은 프로그램이 종료되면 운영체제에 의해서 전부 해제가 된다.
+    
 ```cpp
 #include <stdio.h>
 
@@ -51,8 +52,18 @@ free(ptr3);
 ```
 
 * 동적할당이 필요한 이유
-  * 그때그때 필요한 만큼만 메모리 공간을 확보하고 다 사용했다면 free 시켜 줌으로써 메모리 공간을 해제함으로서 한정된 메모리 공간을 효율적으로 사용할 수 있게 되는것이다.<br/>(컴파일 시 할당에 필요한 메모리 공간이 계산되지 않고, 실행 시 할당에 필요한 메모리 공간이 계산)
+  * 그때그때 필요한 만큼만 메모리 공간을 확보하고 다 사용했다면 free 시켜 줌으로써 메모리 공간을 해제함으로서 한정된 메모리 공간을 효율적으로 사용할 수 있게 되는것이다.<br/>(컴파일 시 할당에 필요한 메모리 공간이 계산되지 않고, 실행(malloc함수 호출) 시 할당에 필요한 메모리 공간이 계산)
 
+##### 6.calloc 함수
+malloc 함수와 같이 메모리 공간을 할당하는 함수로서 malloc 함수와 차이점은 두 개의 전달인자를 이용한 인자의 전달방식과 할당된 메모리 공간의 모든 비트를 0으로 초기화해준다.
 
+```cpp
+#include <stdio.h>
+
+//성공 시 할당된 메모리의 주소 값, 실패 시 NULL 반환
+//elt_count는 할당할 블록의 갯수 정보,  elt_size는 블록 하나당 바이트 크기의 정보
+void* calloc(size_t elt_count, size_t elt_size);
+
+```
 
 
