--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -5,16 +5,16 @@
 
 
 
-##### 1.코드 영역(Code Area)<br/>
+##### 1.코드 영역(Code Area)
 실행할 프로그램의 코드가 저장되는 메모리 공간. CPU는 코드 영역에 저장된 명령문들을 하나씩 가져가서 실행.
 
-##### 2.데이터 영역(Data Area)<br/>
+##### 2.데이터 영역(Data Area)
 전역변수와 static변수가 할당되는 메모리 공간. 전역변수와 static변수가 선언되면 이 영역에 프로그램의 시작과 동시에 할당되어 프로그램 종료 시까지 남아있게 된다는 특징을 가지고 있다.
 
-##### 3.스택 영역(stack Area)<br/>
+##### 3.스택 영역(stack Area)
 지역변수와 매개변수가 할당되는 메모리 공간. 이 영역에 할당되는 변수들은 선언된 함수를 빠져나가면 소멸된다는 특징이 있다.
 
-##### 4.힙 영역(Heap Area)<br/>
+##### 4.힙 영역(Heap Area)
 프로그래머가 원하는 시점에 할당하고 소멸할 수 있는 변수들 또는 생성과 소멸의 시기가 지역변수나 전역변수와 다른 유형의 변수들이 할당되는 메모리 공간. malloc과 free함수를 통해 입 영역에 할당하고 소멸할 수 있다.
 
 ##### 5.힙 영역의 메모리 공간 할당과 해제(malloc과 free함수)
@@ -54,7 +54,7 @@ free(ptr3);
 * 동적할당이 필요한 이유
   * 그때그때 필요한 만큼만 메모리 공간을 확보하고 다 사용했다면 free 시켜 줌으로써 메모리 공간을 해제함으로서 한정된 메모리 공간을 효율적으로 사용할 수 있게 되는것이다.<br/>(컴파일 시 할당에 필요한 메모리 공간이 계산되지 않고, 실행(malloc함수 호출) 시 할당에 필요한 메모리 공간이 계산)
 
-##### 6.calloc 함수
+##### 6. calloc 함수
 malloc 함수와 같이 메모리 공간을 할당하는 함수로서 malloc 함수와 차이점은 두 개의 전달인자를 이용한 인자의 전달방식과 할당된 메모리 공간의 모든 비트를 0으로 초기화해준다.
 
 ```cpp
