--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -63,7 +63,17 @@ malloc 함수와 같이 메모리 공간을 할당하는 함수로서 malloc 함
 //성공 시 할당된 메모리의 주소 값, 실패 시 NULL 반환
 //elt_count는 할당할 블록의 갯수 정보,  elt_size는 블록 하나당 바이트 크기의 정보
 void* calloc(size_t elt_count, size_t elt_size);
-
 ```
 
+##### 7.힙에 할당된 메모리 공간 확장(realloc)
+* 모든 영역의 메모리 공간은 한번 할당하면 크기를 확장할 수 없는데, 힙 영역에서는 realloc함수를 이용하여 할당된 메모리 공간을 확장할 수 있다.
+* 확장하고자 하는 메모리 공간의 뒤를 이어서 확장하기 때문에 만약 넉넉하지 않으면 힙의 다른 위치에서 새로이 요구하는 크기의 메모리 공간을 할당한다.
+
+```cpp
+#include <stdio.h>
+
+//성공 시 새로 할당된 메모리의 주소 값, 실패 시 NULL 반환
+//void* ptr은 확장하고자 하는 힙 메모리의 시작 주소 값, size_t size는 확장하고자 하는 메모리의 전체 크기
+void* realloc(void* ptr, size_t size)
+```
 
