--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -75,5 +75,11 @@ void* calloc(size_t elt_count, size_t elt_size);
 //성공 시 새로 할당된 메모리의 주소 값, 실패 시 NULL 반환
 //void* ptr은 확장하고자 하는 힙 메모리의 시작 주소 값, size_t size는 확장하고자 하는 메모리의 전체 크기
 void* realloc(void* ptr, size_t size)
+
+//예시
+int* arr = (int*)malloc(sizeof(int)*3);    //길이가 3인 int형 배열 할당
+arr = (int*)realloc(arr, sizeof(int)*5);    //길이가 5인 int형 배열로 확장
+
+
 ```
 
