--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -63,6 +63,9 @@ malloc 함수와 같이 메모리 공간을 할당하는 함수로서 malloc 함
 //성공 시 할당된 메모리의 주소 값, 실패 시 NULL 반환
 //elt_count는 할당할 블록의 갯수 정보,  elt_size는 블록 하나당 바이트 크기의 정보
 void* calloc(size_t elt_count, size_t elt_size);
+
+int* arr1 = (int*)malloc(sizeof(int) * 30);    //길이가 30인 int형 변수 크기(4바이트)의 메모리 공간 할당
+int* arr2 = (int*)calloc(30, sizeof(int));    //길이(블록)가 30인 int형 변수 크기(4바이트)의 메모리 공간 할당
 ```
 
 ##### 7.힙에 할당된 메모리 공간 확장(realloc)
@@ -79,7 +82,5 @@ void* realloc(void* ptr, size_t size)
 //예시
 int* arr = (int*)malloc(sizeof(int)*3);    //길이가 3인 int형 배열 할당
 arr = (int*)realloc(arr, sizeof(int)*5);    //길이가 5인 int형 배열로 확장
-
-
 ```
 
