--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -1,8 +1,8 @@
 ### 메모리
 
 #### 메모리의 구조
-* 메모리의 구조는 네개의 영역으로 구분
-
+* 메모리의 구조는 네개의 영역으로 구분<br/>
+<img src="https://github.com/YouAndMeToo3323/TIL/blob/main/C/image/%EB%A9%94%EB%AA%A8%EB%A6%AC_%EA%B5%AC%EC%A1%B0.png" width="350px" height="400px" title="메모리 구조"></img>
 
 
 ##### 1.코드 영역(Code Area)
