--- a/C/learn/구조체_1.md
+++ b/C/learn/구조체_1.md
@@ -1,3 +1,5 @@
+구조체
+===
 ### 구조체(structure)
 * **하나 이상의 변수(포인터 변수와 배열 포함)를 묶어서 새로운 자료형을 정의하는 도구**이다.
 * 새로운 자료형들을 대상으로 변수을 선언할 수 있는데 이렇게 선언되는 변수를 가리켜 **'구조체 변수'** 라 한다.
