--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -1,8 +1,17 @@
 ## 선행처리와 매크로
 
 ### 선행처리
-컴파일 이전의 처리를 의미하며, #문자로 시작하는 선행처리문을 이용하여 소스코드의 일부를 수정한다(단순 치환).
+컴파일 이전의 처리를 의미하며, #문자로 시작하는 선행처리문을 이용하여 소스코드의 일부를 수정한다(단순 치환).<br/>
+선행처리 명령문은 # 문자로 시작을 하며, 컴파일러가 아닌 선행처리기에 의해서 처리되는 문장이기 때문에 명령문의 끝에 세미콜론을 붙이지 않는다.
 
+#### 대표적인 선행처리 명령문
+
+##### 1. #define: Object-like macro(오브젝트와 유사한 매크로, 매크로 상수)
+
+```cpp
+//지시자 매크로 매크로 몸체
+#define  PI     3.1415		//매크로 PI를 매크로 몸체 3.1415로 전부 치환
+```
 
 
 
