--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -18,14 +18,25 @@
 ```
 
 ###### 2. 매크로 함수(함수와 유사한 매크로(Function-like macro))
+* 매크로 함수는 정의할 때에는 매크로의 몸체부분을 구성하는 X와 같은 전달인자 전부 괄호를 해야 하고, 반드시 전체를 괄호로 한번 더 묶어줘야 한다.
+* 매크로를 두 줄 이상에 걸쳐서 정의할 때에는 \문자를 활용해서 줄바꿈을 한다.
 
 ```cpp
 //SQUARE(X) 입력 시 X*X형태로 전환(X는 매개변수)
-#define SQUARE(X) X*X	
+#define SQUARE(X) ((X) * (X))	
 
-//예시
-SQUARE(123);	//123*123
-SQUARE(NUM);	//NUM*NUM
+//매크로를 줄바꿈
+#define SQUARE(Y)  \ 
+    ((Y) * (Y))	
+
+/*잘못된 예시
+//전달인자에 괄호를 안할 경우
+SQUARE(3+2);	//3+2*3+2 = 11, 의도한 값 : 25
+
+//전체 괄호를 안할 경우
+int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
+*/
+
 ```
 
 
