--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -7,17 +7,15 @@
 
 #### 대표적인 선행처리 명령문
 
-##### #define
-
-###### 1. 매크로 상수(오브젝트와 유사한 매크로(Object-like macro))
-매크로의 이름은 식별자가 매크로라는 사실을 부각시키기 위해 대문자로 정의한다.
+##### 1. 매크로 상수(젝트와 유사한 매크로(#define : Object-like macro))
+* 매크로의 이름은 식별자가 매크로라는 사실을 부각시키기 위해 대문자로 정의한다.
 
 ```cpp
 //지시자 매크로 매크로 몸체
 #define  PI     3.1415		//매크로 PI를 매크로 몸체 3.1415로 전부 치환
 ```
 
-###### 2. 매크로 함수(함수와 유사한 매크로(Function-like macro))
+##### 2. 매크로 함수(함수와 유사한 매크로(#define : Function-like macro))
 * 매크로 함수는 정의할 때에는 매크로의 몸체부분을 구성하는 X와 같은 전달인자 전부 괄호를 해야 하고, 반드시 전체를 괄호로 한번 더 묶어줘야 한다.
 * 매크로를 두 줄 이상에 걸쳐서 정의할 때에는 \문자를 활용해서 줄바꿈을 한다.
 
@@ -36,8 +34,20 @@ SQUARE(3+2);	//3+2*3+2 = 11, 의도한 값 : 25
 //전체 괄호를 안할 경우
 int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 */
-
 ```
+
+* **매크로 함수의 장점**
+    * 매크로 함수는 일반 함수에 비해 실행속도가 빠르다.
+    * 자료형에 따라서 별도로 함수를 정의하지 않아도 된다.
+
+* **매크로 함수의 단점**
+    * 정의하기가 정말로 까다롭다.
+    * 디버깅하기가 쉽지 않다.
+    
+* **매크로 함수의 실행속도가 빠른 이유**
+    * 호출된 함수를 위한 스택 메모리의 할당
+    * 실행위치의 이동과 매개변수로의 인자 전달
+    * return 문에 의한 값의 반환
 
 
 
