--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -49,6 +49,28 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
     * 실행위치의 이동과 매개변수로의 인자 전달
     * return 문에 의한 값의 반환
 
+#### 조건부 컴파일을 위한 매크로
+
+##### 1.참이라면(#if... #endif)
+
+```cpp
+
+```
+
+##### 2.정의되었다면(#ifdef... #endif)
+
+```cpp
+
+```
+
+##### 2.정의되었다면(#ifndef... #endif)
+
+```cpp
+
+```
+
+
+
 
 
 
