--- a/C/learn/조건문과_반복문.md
+++ b/C/learn/조건문과_반복문.md
@@ -1,8 +1,10 @@
-반복문
+조건문과 반복문
 ===
+
+### 반복문
 * 코드에 대한 명령이 여러번 실행할 때 사용하는 것이 반복문이며, C언어는 while문, do~while문, for문을 제공하고 있다.
 
-### while문
+#### 1.while문
 * 특정조건을 주고 그 조건을 만족하는 동안, 특정영역을 계속해서 반복하는 구조
 * while문에 대한 반복의 조건이 무너지지 않으면 반복이 멈추지 않는 '무한 루프'라 불리는 현상이 만들어진다(이 상황을 빠져 나오려면 강제 종료 및 Ctrl + C키를 입력).
 * 반복의 대상이 하나의 문장이라면 중괄호는 생략 가능
@@ -20,7 +22,7 @@ while(1)
 	printf("Hello world! \n");
 ```
 
-#### do~while문
+#### 2.do~while문
 * 처음부터 '반복조건'을 만족하지 못하면 '반복영역'을 한번도 실행하지 않는 while문과 달리, 반복영역을 최소한 한번은 실행하는 구조
 
 ```cpp
@@ -31,7 +33,7 @@ do
 }while(num < 3);
 ```
 
-### for문
+#### 3.for문
 * while문이나 do~while문과 달리 반복을 구성하기 위해 필요한 모든 것을 한데 묶을 수 있도록 만들어진 반복문
 * 반복의 횟수가 딱 정해진 경우라면 for문이 최선이고 정해지지 않으면 while문이 자연스럽다.
 * for문의 중간에 위치한 '조건식'이 비워지면 무조건 '참'으로 인식이 되어 무한루프를 형성한다.
@@ -44,23 +46,21 @@ for(초기식 ; 조건식 ; 증감식)
 }
 ```
 
-### for문의 필수요소 3가지
+##### for문의 필수요소 3가지
 1. 초기식 : 반복을 위한 변수의 선언 및 초기화에 사용(int i = 0)<br/>
 2. 조건식 : 반복의 조건을 검사하는 목적으로 선언(num < 3)<br/>
 3. 증감식 : 반복의 조건을 '거짓'으로 만드는 증가 및 감소 연산(num++)
 
-조건문(흐름의 분기)
----
+### 조건문(흐름의 분기)
 * 분기의 기본은 두개의 키워드 if와 else로 구성이 되는 if~else문이다.
 * 첫번째 키워드인 if는 독립적으로 사용되어 '조건적 실행'을 가능
 * if문은 참이면 실행하고 거짓이면 건너뛴다.
 
-### if~else문의 특징
+#### 1.if~else문의 특징
 1. 조건 만족여부 검사는 위에서 아래로 진행이 된다.(if문)<br/>
 2. 조건이 만족되어서 해당 블록을 실행하고 나면 나머지 else까지도 건너뛴다.('조건1'이 '거짓'이고 '조건2'가 '참'이라면 조건2 실행)
 
-
-### 삼 항 연산자(조건연산자)
+#### 2.삼 항 연산자(조건연산자)
 * 조건이 '참'이면 연산결과로 data1이 반환되고, 조건이 '거짓'이면 연산결과로 data2가 반환됨.
 ```cpp
 int main()
@@ -68,42 +68,8 @@ int main()
   A>B ? A : B;  //(조건) ? (data1) : (data2);		
 }
 ```
-### break 
-* 반복문 탈출할 때(빠져 나올 때) 사용하는 키워드로서, break문을 가장 가까이서 감싸고 있는 반복문 하나를 빠져 나오게 된다.(while,for)
 
-```cpp
-while(true)
-{
-  if(num<10)
-  {
-    num++;
-  }
-  else
-  {
-    break;    //num이 10보다 크면 반복문 탈출
-  }
-}
-```
-
-### continue 
-* continue문의 이후는 생략을 하고, 다시 실행을 하게 된다.
-```cpp
-for(i=0;i<10;i++)
-{
-  for(j=1;j<10;j++)
-  {
-    if(i%3==0)
-    {
-      continue;	//3의 배수를 빼고 출력
-    }
-    printf("%d * %d = %d",i,j,i*j);
-  }
-}
-```
-
-
-
-### switch 
+### switch문
 * 정수형 변수(n)에 지정된 값에 따라서 실행할 영역(case)이 결정된다(break문이 생략하면 다음 실행할 영역에 break문이 존재할때 까지 전부 실행한다).
 
 ```cpp
@@ -121,3 +87,39 @@ default:
 	printf("default");
 }
 ```
+
+### 반복문과 조건문 키워드
+#### break문
+* 반복문 탈출할 때(빠져 나올 때) 사용하는 키워드로서, break문을 가장 가까이서 감싸고 있는 반복문 하나를 빠져 나오게 된다.(while,for)
+
+```cpp
+while(true)
+{
+  if(num<10)
+  {
+    num++;
+  }
+  else
+  {
+    break;    //num이 10보다 크면 반복문 탈출
+  }
+}
+```
+
+#### continue문
+* continue문의 이후는 생략을 하고, 다시 실행을 하게 된다.
+```cpp
+for(i=0;i<10;i++)
+{
+  for(j=1;j<10;j++)
+  {
+    if(i%3==0)
+    {
+      continue;	//3의 배수를 빼고 출력
+    }
+    printf("%d * %d = %d",i,j,i*j);
+  }
+}
+```
+
+
