--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -54,7 +54,26 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 ##### 1.참이라면(#if... #endif)
 
 ```cpp
+#include <stdio.h>
+#define ADD	1
+#define MIN	0
 
+int main()
+{
+...
+...
+
+
+#if ADD		//ADD가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
+    ...
+#endif
+
+#if MIN		//MIN가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
+    ...
+#endif
+
+return 0;
+}
 ```
 
 ##### 2.정의되었다면(#ifdef... #endif)
