--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -52,7 +52,7 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 #### 조건부 컴파일을 위한 매크로
 
 ##### 1.참이라면(#if... #endif)
-
+* #if...#endif는 조건부 컴파일을 제어하는 전처리기 지시문으로서, #if는 지정된 기호가 정의된 경우에만 코드가 컴파일되는 조건부 컴파일을 실행하고 #endif는 앞에 있는 조건부 컴파일을 닫는다.
 ```cpp
 #include <stdio.h>
 #define ADD	1
