--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -7,6 +7,12 @@
 
 #### 대표적인 선행처리 명령문
 
+* #define<br/>
+#define 전처리기 지시문은 조건부 컴파일용 기호를 정의해준다.
+
+* #undefine<br/>
+#undefine 전처리기 지시문은 반대로 조건부 컴파일용 기호 정의를 취소한다.
+
 ##### 1. 매크로 상수(젝트와 유사한 매크로(#define : Object-like macro))
 * 매크로의 이름은 식별자가 매크로라는 사실을 부각시키기 위해 대문자로 정의한다.
 
