--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -54,11 +54,16 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
     * 호출된 함수를 위한 스택 메모리의 할당
     * 실행위치의 이동과 매개변수로의 인자 전달
     * return 문에 의한 값의 반환
-
+ 
 #### 조건부 컴파일을 위한 매크로
+* 조건부 컴파일을 사용하면 지정한 조건에 따라 코드의 일정 부분을 컴파일할지 안 할지를 지정할 수 있다.
+* #if 및 #ifdef 같은 모든 조건부 컴파일 지시문은 파일 종료 전에 닫는 #endif 지시문과 일치해야 한다.
 
-##### 1.참이라면(#if... #endif)
-* #if...#endif는 조건부 컴파일을 제어하는 전처리기 지시문으로서, #if는 지정된 기호가 정의된 경우에만 코드가 컴파일되는 조건부 컴파일을 실행하고 #endif는 앞에 있는 조건부 컴파일을 닫는다.
+
+##### 1.#if, #endif
+* #if 전처리기 지시문은 조건식이 참이면 컴파일할 코드를 삽입하고 거짓이면 삭제한다.
+* #endif 전처리기 지시문은 앞에 있는 조건부 컴파일을 닫는다.
+
 ```cpp
 #include <stdio.h>
 #define ADD	1
@@ -66,34 +71,46 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 
 int main()
 {
-...
-...
-
-
-#if ADD		//ADD가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
-    ...
-#endif
-
-#if MIN		//MIN가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
-    ...
-#endif
-
-return 0;
+    #if ADD		//ADD가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
+    	...
+    #endif
+    #if MIN		//MIN가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
+    	...
+    #endif
+    
+    return 0;
 }
 ```
 
-##### 2.정의되었다면(#ifdef... #endif)
+##### 2.#ifdef, #ifndef
+* #ifdef 전처리기 지시문은 매크로가 정의되어 있다면 해당 매크로의 값에 상관없이 컴파일할 코드를 삽입한다.
+* #ifndef 전처리기 지시문은 매크로가 정의되어 있지 않다면 해당 매크로의 값에 상관없이 컴파일할 코드를 삽입한다(#ifndef의 중간에 있는 n은 not을 의미).
+* #ifndef..#endif는 헤더파일의 중복포함을 막기 위해 주로 사용한다.
 
 ```cpp
+#include <stdio.h>
+//#define ADD 1
+#define MIN 0
 
+int main()
+{
+    #ifdef ADD		//ADD가 정의되어 있지않으므로 #endif 사이에 있는 코드 삭제
+        ...
+    #endif
+    #ifdef MIN		//MIN이 정의되어 있으므로 #endif 사이에 있는 코드 삽입
+        ...
+    #endif
+    
+    #ifndef ADD		//ADD가 정의되어 있지않으므로 #endif 사이에 있는 코드 삽입
+        ...
+    #endif
+    #ifndef MIN		//MIN이 정의되어 있으므로 #endif 사이에 있는 코드 삭제
+        ...
+    #endif
+    
+    return 0;
+}
 ```
-
-##### 2.정의되었다면(#ifndef... #endif)
-
-```cpp
-
-```
-
 
 
 
