--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -1,17 +1,31 @@
 ## 선행처리와 매크로
 
 ### 선행처리
-* 컴파일 이전의 처리를 의미하며, #문자로 시작하는 선행처리문을 이용하여 소스코드의 일부를 수정한다(단순 치환).
-* 선행처리 명령문은 #문자로 시작을 하며, 컴파일러가 아닌 선행처리기에 의해서 처리되는 문장이기 때문에 명령문의 끝에 세미콜론을 붙이지 않는다.
-* 선행처리기에 의해서 변환되는 과정 자체를 가리켜 '매크로 확장(macro expansion)'이라 한다.
+* 선행처리란 실행 파일을 생성하는 과정에서 소스 파일 내에 존재하는 선행처리 지시문을 처리하는 작업을 의미한다.
+* #문자로 시작하는 선행처리문을 이용하여 소스코드의 일부를 수정한다(단순 치환).
+* 이러한 선행처리 작업은 컴파일하기 전 선행처리기(preprocessor)에 의해 먼저 처리된다.
+* 선행처리기는 코드를 생성하는 것이 아니라, 컴파일러가 컴파일하기 좋도록 소스를 재구성해 주는 역할만을 한다.
+
+#### 선행처리문의 특징
+* 선행처리문은 선행처리 문자(#)로 시작한다.
+* 선행처리문은 코드 내에서 하나의 라인을 모두 차지하며, 선행처리문 뒤에 C언어 코드를 추가하여 같이 사용할 수 없다.
+* 선행처리문은 다른 C언어의 명령문과는 달리 맨 뒤에 세미콜론(;)을 붙이지 않는다.
+* 행처리문은 소스 파일 어디에나 위치할 수 있지만, 선행처리문이 위치한 곳에서부터 파일의 끝까지만 영향을 미친다.
+
+#### 선행처리 지시자(preprocessing directives)
+전처리기가 실행되면 각 코드는 파일에서 지시자를 찾는다. 지시자는 #으로 시작해서 줄바꿈(개행)으로 끝나는 코드를 뜻한다.
+
+|선행처리 지시자|설명|
+|:--:|:--|
+|#include|외부에 선언된 함수나 상수 등을 사용하기 위해, 함수나 상수가 포함된 외부 파일을 현재 파일에 포함할 때 사용|
+|#define|함수나 단순화해주는 매크로를 정의할 때 사용|
+|#undef|#define 지시자로 이미 정의된 매크로를 삭제할 때 사용|
+|#line|__LINE__매크로와 __FILE__매크로를 재정의할 때 사용|
+|#error|지정한 오류 메시지를 출력하고, 컴파일 과정을 중단하고자 할 때 사용|
+|#pragma|프로그램의 이식성을 위해 운영체제별로 달라지는 지시사항을 컴파일에 전달할 때 사용|
+|#if, #ifdef, #ifndef,<br>#elif, #else, #endif|조건부 컴파일 지시자|
 
 #### 대표적인 선행처리 명령문
-
-* #define<br/>
-#define 전처리기 지시문은 조건부 컴파일용 기호를 정의해준다.
-
-* #undefine<br/>
-#undefine 전처리기 지시문은 반대로 조건부 컴파일용 기호 정의를 취소한다.
 
 ##### 1. 매크로 상수(젝트와 유사한 매크로(#define : Object-like macro))
 * 매크로의 이름은 식별자가 매크로라는 사실을 부각시키기 위해 대문자로 정의한다.
