--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -25,9 +25,29 @@
 |#pragma|프로그램의 이식성을 위해 운영체제별로 달라지는 지시사항을 컴파일에 전달할 때 사용|
 |#if, #ifdef, #ifndef,<br>#elif, #else, #endif|조건부 컴파일 지시자|
 
-#### 대표적인 선행처리 명령문
+#### #include
+* #include 선행처리 지시자는 외부에 선언된 함수나 상수 등을 사용하기 위해서 헤더 파일을 현재 파일에 포함할 때 사용.
+* 선행처리기는 #include 지시자 뒤에 나오는 파일 이름을 보고 해당 파일을 찾아서 그 내용을 현재 파일에 포함해준다.
 
-##### 1. 매크로 상수(젝트와 유사한 매크로(#define : Object-like macro))
+* #include 선행처리 지시문에서 파일 이름을 표시하는 방법
+	* #include <stdio.h>
+		* C언어에서 제공하는 표준 헤더 파일을 포함할 때에는 보통 꺾쇠괄호(<>)를 사용.
+		* 꺾쇠괄호를 사용하여 파일 이름을 표시하면 선행처리기는 가장 먼저 표준 시스템 디렉터리에서 파일 이름에 해당하는 헤더 파일을 찾는다.
+		* 하지만 표준 시스템 디렉터리에서 파일 이름에 해당하는 헤더 파일을 찾지 못하면 현재 작업 디렉터리도 검색한다.
+
+	* #include "myStdio.h"
+		* 사용자가 직접 작성한 헤더 파일을 포함할 때에는 보통 큰따옴표("")를 사용.
+		* 큰따옴표를 사용하여 파일 이름을 표시하면 선행처리기는 가장 먼저 현재 작업 디렉터리에서 파일 이름에 해당하는 헤더 파일을 찾는다.
+		* 하지만 파일 이름에 해당하는 헤더 파일을 찾지 못하면 표준 시스템 디렉터리도 검색한다.
+
+#### #define
+* #define 선행처리 지시자는 함수나 상수를 단순화해주는 매크로를 정의할 때 사용.
+* 매크로는 함수나 상수에 이름을 붙임으로써, 해당 매크로가 무엇을 가리키고 있는지를 명확하게 나타내준다.
+* 선행처리기는 #define 선행처리 지시문의 식별자를 단순히 대체 리스트(replacement-list)로 치환. 이러한 과정을 매크로 확장(macro expansion)이라고 한다.
+* 매크로 이름인 식별자는 C언어의 변수 이름 생성 규칙과 똑같은 생성 규칙을 따라서 작성.
+* 매크로 이름 중간에는 공백을 넣을 수 없지만, 실제값은 공백을 가질 수 있다. 또한, 매크로끼리 중첩하여 사용할 수 있다.
+
+##### 1. 매크로 상수(오브젝트와 유사한 매크로(#define : Object-like macro))
 * 매크로의 이름은 식별자가 매크로라는 사실을 부각시키기 위해 대문자로 정의한다.
 
 ```cpp
@@ -36,7 +56,7 @@
 ```
 
 ##### 2. 매크로 함수(함수와 유사한 매크로(#define : Function-like macro))
-* 매크로 함수는 정의할 때에는 매크로의 몸체부분을 구성하는 X와 같은 전달인자 전부 괄호를 해야 하고, 반드시 전체를 괄호로 한번 더 묶어줘야 한다.
+* C언어에서는 #define 선행처리 지시문에 인수로 함수의 정의를 전달함으로써 함수처럼 동작하는 매크로(매크로 함수)를 만들 수 있다.
 * 매크로를 두 줄 이상에 걸쳐서 정의할 때에는 \문자를 활용해서 줄바꿈을 한다.
 
 ```cpp
@@ -56,27 +76,33 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 */
 ```
 
-* **매크로 함수의 장점**
-    * 매크로 함수는 일반 함수에 비해 실행속도가 빠르다.
-    * 자료형에 따라서 별도로 함수를 정의하지 않아도 된다.
+##### 매크로 함수 사용 시 주의사항
+* 매크로 함수의 전체를 괄호(())로 감싸야 한다.
+* 매크로 함수의 인수들도 각각 괄호로 감싸야 한다.
+* 매크로 함수를 호출할 때에는 증감 연산자(++, --)나 복합 대입 연산자 등은 사용하지 않는 것이 좋다.
 
-* **매크로 함수의 단점**
-    * 정의하기가 정말로 까다롭다.
-    * 디버깅하기가 쉽지 않다.
-    
-* **매크로 함수의 실행속도가 빠른 이유**
-    * 호출된 함수를 위한 스택 메모리의 할당
-    * 실행위치의 이동과 매개변수로의 인자 전달
-    * return 문에 의한 값의 반환
+##### 매크로 함수의 장점
+* 매크로 함수는 단순 치환만을 해주므로, 인수의 타입을 신경 쓰지 않는다.
+* 매크로 함수를 사용하면 여러 개의 명령문을 동시에 포함할 수 있다.
+* 함수 호출에 의한 성능 저하가 일어나지 않으므로, 프로그램의 실행속도가 향상된다.
+
+##### 매크로 함수의 실행속도가 빠른 이유
+* 호출된 함수를 위한 스택 메모리의 할당
+* 실행위치의 이동과 매개변수로의 인자 전달
+* return 문에 의한 값의 반환
+
+##### 매크로 함수의 단점
+* 원하는 결과를 얻는 정확한 매크로 함수의 구현은 어려우며, 따라서 디버깅 또한 매우 어렵다.
+* 매크로 함수의 크기가 증가하면 증가할수록 사용되는 괄호 또한 매우 많아져서 가독성이 떨어진다.
  
-#### 조건부 컴파일을 위한 매크로
+#### 조건부 컴파일(conditional compile)
 * 조건부 컴파일을 사용하면 지정한 조건에 따라 코드의 일정 부분을 컴파일할지 안 할지를 지정할 수 있다.
-* #if 및 #ifdef 같은 모든 조건부 컴파일 지시문은 파일 종료 전에 닫는 #endif 지시문과 일치해야 한다.
+* C언어의 조건문과는 달리 #endif 지시자를 사용하여 반드시 조건부 컴파일의 끝을 명시해야 한다.
 
-
-##### 1.#if, #endif
-* #if 전처리기 지시문은 조건식이 참이면 컴파일할 코드를 삽입하고 거짓이면 삭제한다.
-* #endif 전처리기 지시문은 앞에 있는 조건부 컴파일을 닫는다.
+##### 1.#if
+* #if 지시자 다음에 나오는 조건식1의 결과가 0이 아니면 참, 0이면 거짓으로 간주
+* 참이라면 #endif 사이에 있는 컴파일할 코드를 삽입, 거짓이면 통과
+* #endif 지시자는 앞에 있는 조건부 컴파일을 닫는다.
 
 ```cpp
 #include <stdio.h>
@@ -85,10 +111,10 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 
 int main()
 {
-    #if ADD		//ADD가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
+    #if ADD		//ADD가 참이라면 #endif 사이에 있는 컴파일할 코드를 삽입, 거짓이면 통과
     	...
     #endif
-    #if MIN		//MIN가 '참'이라면 #endif 사이에 있는 코드를 삽입, 거짓이면 삭제
+    #if MIN		//MIN가 참이라면 #endif 사이에 있는 컴파일할 코드를 삽입, 거짓이면 통과
     	...
     #endif
     
@@ -97,9 +123,9 @@ int main()
 ```
 
 ##### 2.#ifdef, #ifndef
-* #ifdef 전처리기 지시문은 매크로가 정의되어 있다면 해당 매크로의 값에 상관없이 컴파일할 코드를 삽입한다.
-* #ifndef 전처리기 지시문은 매크로가 정의되어 있지 않다면 해당 매크로의 값에 상관없이 컴파일할 코드를 삽입한다(#ifndef의 중간에 있는 n은 not을 의미).
-* #ifndef..#endif는 헤더파일의 중복포함을 막기 위해 주로 사용한다.
+* #ifdef 지시자는 매크로가 정의되어 있다면 해당 매크로의 값에 상관없이 컴파일할 코드를 삽입한다.
+* #ifndef 지시자는 매크로가 정의되어 있지 않다면 해당 매크로의 값에 상관없이 컴파일할 코드를 삽입한다(#ifndef의 중간에 있는 n은 not을 의미).
+* #ifdef..#endif과 #ifndef..#endif 매크로는 헤더파일의 중복포함 및 선언을 막기 위해 주로 사용한다.
 
 ```cpp
 #include <stdio.h>
@@ -108,17 +134,17 @@ int main()
 
 int main()
 {
-    #ifdef ADD		//ADD가 정의되어 있지않으므로 #endif 사이에 있는 코드 삭제
+    #ifdef ADD		//ADD가 정의되어 있지않으므로 #endif 사이에 있는 컴파일할 코드를 통과
         ...
     #endif
-    #ifdef MIN		//MIN이 정의되어 있으므로 #endif 사이에 있는 코드 삽입
+    #ifdef MIN		//MIN이 정의되어 있으므로 #endif 사이에 있는 컴파일할 코드를 삽입
         ...
     #endif
     
-    #ifndef ADD		//ADD가 정의되어 있지않으므로 #endif 사이에 있는 코드 삽입
+    #ifndef ADD		//ADD가 정의되어 있지않으므로 #endif 사이에 있는 컴파일할 코드를 삽입
         ...
     #endif
-    #ifndef MIN		//MIN이 정의되어 있으므로 #endif 사이에 있는 코드 삭제
+    #ifndef MIN		//MIN이 정의되어 있으므로 #endif 사이에 있는 컴파일할 코드를 통과
         ...
     #endif
     
