--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -8,9 +8,9 @@
 
 #### 선행처리문의 특징
 * 선행처리문은 선행처리 문자(#)로 시작한다.
-* 선행처리문은 코드 내에서 하나의 라인을 모두 차지하며, 선행처리문 뒤에 C언어 코드를 추가하여 같이 사용할 수 없다.
-* 선행처리문은 다른 C언어의 명령문과는 달리 맨 뒤에 세미콜론(;)을 붙이지 않는다.
-* 행처리문은 소스 파일 어디에나 위치할 수 있지만, 선행처리문이 위치한 곳에서부터 파일의 끝까지만 영향을 미친다.
+* 코드 내에서 하나의 라인을 모두 차지하며, 선행처리문 뒤에 C언어 코드를 추가하여 같이 사용할 수 없다.
+* 다른 C언어의 명령문과는 달리 맨 뒤에 세미콜론(;)을 붙이지 않는다.
+* 소스 파일 어디에나 위치할 수 있지만, 선행처리문이 위치한 곳에서부터 파일의 끝까지만 영향을 미친다.
 
 #### 선행처리 지시자(preprocessing directives)
 전처리기가 실행되면 각 코드는 파일에서 지시자를 찾는다. 지시자는 #으로 시작해서 줄바꿈(개행)으로 끝나는 코드를 뜻한다.
@@ -26,10 +26,10 @@
 |#if, #ifdef, #ifndef,<br>#elif, #else, #endif|조건부 컴파일 지시자|
 
 #### #include
-* #include 선행처리 지시자는 외부에 선언된 함수나 상수 등을 사용하기 위해서 헤더 파일을 현재 파일에 포함할 때 사용.
+* #include 지시자는 외부에 선언된 함수나 상수 등을 사용하기 위해서 헤더 파일을 현재 파일에 포함할 때 사용.
 * 선행처리기는 #include 지시자 뒤에 나오는 파일 이름을 보고 해당 파일을 찾아서 그 내용을 현재 파일에 포함해준다.
 
-* #include 선행처리 지시문에서 파일 이름을 표시하는 방법
+* #include 문에서 파일 이름을 표시하는 방법
 	* #include <stdio.h>
 		* C언어에서 제공하는 표준 헤더 파일을 포함할 때에는 보통 꺾쇠괄호(<>)를 사용.
 		* 꺾쇠괄호를 사용하여 파일 이름을 표시하면 선행처리기는 가장 먼저 표준 시스템 디렉터리에서 파일 이름에 해당하는 헤더 파일을 찾는다.
@@ -41,7 +41,7 @@
 		* 하지만 파일 이름에 해당하는 헤더 파일을 찾지 못하면 표준 시스템 디렉터리도 검색한다.
 
 #### #define
-* #define 선행처리 지시자는 함수나 상수를 단순화해주는 매크로를 정의할 때 사용.
+* #define 지시자는 함수나 상수를 단순화해주는 매크로를 정의할 때 사용.
 * 매크로는 함수나 상수에 이름을 붙임으로써, 해당 매크로가 무엇을 가리키고 있는지를 명확하게 나타내준다.
 * 선행처리기는 #define 선행처리 지시문의 식별자를 단순히 대체 리스트(replacement-list)로 치환. 이러한 과정을 매크로 확장(macro expansion)이라고 한다.
 * 매크로 이름인 식별자는 C언어의 변수 이름 생성 규칙과 똑같은 생성 규칙을 따라서 작성.
@@ -56,7 +56,7 @@
 ```
 
 ##### 2. 매크로 함수(함수와 유사한 매크로(#define : Function-like macro))
-* C언어에서는 #define 선행처리 지시문에 인수로 함수의 정의를 전달함으로써 함수처럼 동작하는 매크로(매크로 함수)를 만들 수 있다.
+* C언어에서는 #define 문에 인수로 함수의 정의를 전달함으로써 함수처럼 동작하는 매크로(매크로 함수)를 만들 수 있다.
 * 매크로를 두 줄 이상에 걸쳐서 정의할 때에는 \문자를 활용해서 줄바꿈을 한다.
 
 ```cpp
