--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -111,12 +111,12 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 
 int main()
 {
-    #if ADD		//ADD가 참이라면 #endif 사이에 있는 컴파일할 코드를 삽입, 거짓이면 통과
+#if ADD		//ADD가 참이라면 #endif 사이에 있는 컴파일할 코드를 삽입, 거짓이면 통과
     	...
-    #endif
-    #if MIN		//MIN가 참이라면 #endif 사이에 있는 컴파일할 코드를 삽입, 거짓이면 통과
+#endif
+#if MIN		//MIN가 참이라면 #endif 사이에 있는 컴파일할 코드를 삽입, 거짓이면 통과
     	...
-    #endif
+#endif
     
     return 0;
 }
@@ -148,10 +148,33 @@ int main()
         ...
     #endif
     
-    return 0;
+	return 0;
 }
 ```
+3.#else, #elif
+* if 문에 else를 추가할 수 있듯이 #if, #ifdef, #ifndef 문에 #else 지시자를 사용하여 모든 조건에 해당하지 않는 경우를 지정할 수 있다.
+* #if문에 else if를 여러 번 추가할 수 있듯이, #if문에 #elif 지시자를 사용하여 조건식을 여러 개 사용할 수 있다.
+* #elif의 끝을 #else로 마무리 할 수 있다.
 
+```cpp
+#include <stdio.h>
+#define HIT_NUM 7
+
+int main()
+{
+#if HIT_NUM==5
+	puts("매크로 상수 HIT_NUM은 현재 5입니다.");
+#elif HIT_NUM==6
+	puts("매크로 상수 HIT_NUM은 현재 6입니다.");
+#elif HIT_NUM==7
+	puts("매크로 상수 HIT_NUM은 현재 7입니다.");
+#else
+	puts("매크로 상수 HIT_NUM은 5, 6, 7이 아닙니다.");
+#endif
+
+	return 0;
+}
+```
 
 
 
