--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -151,7 +151,7 @@ int main()
 	return 0;
 }
 ```
-3.#else, #elif
+##### 3.#else, #elif
 * if 문에 else를 추가할 수 있듯이 #if, #ifdef, #ifndef 문에 #else 지시자를 사용하여 모든 조건에 해당하지 않는 경우를 지정할 수 있다.
 * #if문에 else if를 여러 번 추가할 수 있듯이, #if문에 #elif 지시자를 사용하여 조건식을 여러 개 사용할 수 있다.
 * #elif의 끝을 #else로 마무리 할 수 있다.
@@ -176,7 +176,10 @@ int main()
 }
 ```
 
-
+#### #연산자
+* #연산자는 매크로 함수의 대체 리스트 안의 인수 앞에 사용하여 토큰을 문자열로 변환시켜준다.
+* 해당 토큰은 실인수(argument)로 치환되면서 양쪽에 위치한 큰따옴표("")를 포함해 그대로 문자열 상수로 변환한다.
+* #연산자를 사용하면 문자열 안에 매크로 함수로 전달된 인수를 포함시킬 수 있다.
 
 
 
