--- a/C/learn/함수.md
+++ b/C/learn/함수.md
@@ -42,6 +42,11 @@ void HowToUseThisProg(void)
 	printf("자! 그럼 두 개의 정수를 입력하세요.\n");
 }
 ```
+
+#### 함수(부 프로그램)의 호출방식(인수 전달 방식)
+* 실인자 : 실인수(actual argument)라고도 하며 주 프로그램에서 부프로그램으로 넘겨 줄 값(함수를 호출하면서 실제로 함수에 넘기는 값)을 갖고 있는데 실인수는 변수, 배열 변수, 상수, 계산식 등 어떤 형태라도 가능하다.
+* 가인자 : 가인수(dummy argument) 또는 형식인자(매개변수)라고 하며 주 프로그램의 실인수로부터 정보를 넘겨 받을 인수로서 단순변수 형태여야 한다.
+
 ### 함수와 관계있는 변수
 * 변수는 선언되는 위치에 따라서 크게 '전역변수'와 '지역변수로' 나뉜다.
   
