--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -181,6 +181,36 @@ int main()
 * 해당 매개변수는 실인수로 치환되면서 양쪽에 위치한 큰따옴표("")를 포함해 그대로 문자열 상수로 치환된다.
 * 문자열 안에 #연산자를 사용하면 매크로 함수로 전달된 인수를 포함시킬 수 있으며, 문자열이 나란히 선언되면 하나의 문자열로 간주한다.
 
+```cpp
+#include <stdio.h>
+#define SQR(X) printf(""#X"의 제곱은 %d입니다.\n", ((X)*(X)))
+#define STRING_JOB(A,B)	#A "의 직업은 "	#B	"입니다."	//"A""의 직업은 ""B""입니다." -> "A의 직업은 B입니다."
+
+int main()
+{
+	int x = 5;
+
+	SQR(x);		//""x"의 제곱은 "25"입니다."	->	"x의 제곱은 25입니다."
+	SQR(3+4);	//""3+4"의 제곱은 "49"입니다."	->	"3+4의 제곱은 49입니다."
+
+	printf("%s \n",STRING_JOB(가나다,학생));	//"가나다의 직업은 학생입니다."
+	printf("%s \n",STRING_JOB(라마바,선생님));	//"라마바의 직업은 선생님입니다."
+
+	return 0;
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
