--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -193,8 +193,9 @@ int main()
 	SQR(x);		//""x"의 제곱은 "25"입니다."	->	"x의 제곱은 25입니다."
 	SQR(3+4);	//""3+4"의 제곱은 "49"입니다."	->	"3+4의 제곱은 49입니다."
 
-	printf("%s \n",STRING_JOB(가나다,학생));	//"가나다의 직업은 학생입니다."
-	printf("%s \n",STRING_JOB(라마바,선생님));	//"라마바의 직업은 선생님입니다."
+	printf("%s \n",STRING_JOB(철수,학생));		//"철수의 직업은 학생입니다."
+	printf("%s \n",STRING_JOB(영희,선생님));	//"영희의 직업은 선생님입니다."
+
 
 	return 0;
 }
