--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -51,8 +51,8 @@
 * 매크로의 이름은 식별자가 매크로라는 사실을 부각시키기 위해 대문자로 정의한다.
 
 ```cpp
-//지시자 매크로 매크로 몸체
-#define  PI     3.1415		//매크로 PI를 매크로 몸체 3.1415로 전부 치환
+//지시자	매크로(식별자)	매크로 몸체(대체리스트)
+#define		PI		3.1415			//매크로 PI를 매크로 몸체 3.1415로 전부 치환
 ```
 
 ##### 2. 매크로 함수(함수와 유사한 매크로(#define : Function-like macro))
@@ -177,8 +177,9 @@ int main()
 ```
 
 #### #연산자
-* #연산자는 치환의 결과를 문자열로 구성하는 연산자로서, 매크로 함수의 매개변수에 전달되는 인자 앞에 사용하여 문자열로 치환시켜준다.
-* 해당 매개변수는 실인수로 치환되면서 양쪽에 위치한 큰따옴표("")를 포함해 그대로 문자열 상수로 치환된다.
+* #연산자는 치환의 결과를 문자열로 구성하는 연산자로서, 매크로 함수의 대체 리스트 안의 인수 앞에 사용하여 토큰을 문자열로 변환시켜준다.
+* 토큰이란 의미를 구성하는 최소 단위이다. 식별자나 키워드가 토큰이 일종이다.
+* 해당 토큰은 실인수로 치환되면서 양쪽에 위치한 큰따옴표("")를 포함해 그대로 문자열 상수로 치환된다.
 * 문자열 안에 #연산자를 사용하면 매크로 함수로 전달된 인수를 포함시킬 수 있으며, 문자열이 나란히 선언되면 하나의 문자열로 간주한다.
 
 ```cpp
@@ -189,6 +190,10 @@ int main()
 int main()
 {
 	int x = 5;
+	
+	/*
+	printf  (  "Height: %d\n"  ,    height  )  ;	//7개의 토큰으로 구성
+	*/
 
 	SQR(x);		//""x"의 제곱은 "25"입니다."	->	"x의 제곱은 25입니다."
 	SQR(3+4);	//""3+4"의 제곱은 "49"입니다."	->	"3+4의 제곱은 49입니다."
@@ -201,7 +206,9 @@ int main()
 }
 ```
 
-
+#### ##연산자
+* ##연산자는 두 개의 토큰을 하나의 토큰으로 결합해 주는 선행처리기 연산자로서 함수 같은 매크로뿐만 아니라 객체 같은 매크로의 대체 리스트에도 사용할 수 있다.
+* 이 연산자를 사용하면 변수나 함수의 이름을 프로그램의 런타임에 정의할 수 있다.
 
 
 
