--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -178,7 +178,7 @@ int main()
 
 #### #연산자
 * #연산자는 치환의 결과를 문자열로 구성하는 연산자로서, 매크로 함수의 대체 리스트 안의 인수 앞에 사용하여 토큰을 문자열로 변환시켜준다.
-* 토큰이란 의미를 구성하는 최소 단위이다. 식별자나 키워드가 토큰이 일종이다.
+* 토큰이란 의미를 구성하는 최소 단위로서 식별자나 키워드를 토큰이라고도 부른다.
 * 해당 토큰은 실인수로 치환되면서 양쪽에 위치한 큰따옴표("")를 포함해 그대로 문자열 상수로 치환된다.
 * 문자열 안에 #연산자를 사용하면 매크로 함수로 전달된 인수를 포함시킬 수 있으며, 문자열이 나란히 선언되면 하나의 문자열로 간주한다.
 
