--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -210,7 +210,21 @@ int main()
 * ##연산자는 두 개의 토큰을 하나의 토큰으로 결합해 주는 선행처리기 연산자로서 함수 같은 매크로뿐만 아니라 객체 같은 매크로의 대체 리스트에도 사용할 수 있다.
 * 이 연산자를 사용하면 변수나 함수의 이름을 프로그램의 런타임에 정의할 수 있다.
 
+```cpp
+#include <stdio.h>
+#define XN(n) x ## n
 
+int main(void)
+{
+	int XN(1) = 10;
+	int XN(2) = 20;
+
+	printf("x1에 저장된 값은 %d입니다.\n", x1);
+	printf("x2에 저장된 값은 %d입니다.\n", x2);
+
+	return 0;
+}
+```
 
 
 
