--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -212,15 +212,15 @@ int main()
 
 ```cpp
 #include <stdio.h>
-#define XN(n) x ## n
+#define XN(n) x ## n	//x ## n -> xn
 
 int main(void)
 {
 	int XN(1) = 10;
 	int XN(2) = 20;
 
-	printf("x1에 저장된 값은 %d입니다.\n", x1);
-	printf("x2에 저장된 값은 %d입니다.\n", x2);
+	printf("x1에 저장된 값은 %d입니다.\n", x1);	//x1에 저장된 값은 10입니다.
+	printf("x2에 저장된 값은 %d입니다.\n", x2);	//x2에 저장된 값은 20입니다.
 
 	return 0;
 }
