--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -1,4 +1,21 @@
+컴파일
+==
+### 분할 컴파일
+* 작성된 모듈(module)은 개별적으로 컴파일된 후, 링커에 의해 하나의 실행 파일로 만들어진다.
+* 이렇게 하나의 실행 파일을 만들기 위해서 소스 파일을 여러 개로 나누어 개발하는 방식을 분할 컴파일 방식이라고 한다.
+* 최종적인 실행 파일의 생성을 위해서 접근하는 변수나 호출하는 함수가 어디에 있는지 서로 연결해주는 작업을 링크(link)라고 한다.
+```
+소스 파일1 --(선행처리기)--(컴파일)--> 오브젝트 파일1	}
+                                                        }	--(링크)-->	실행 파일
+소스 파일2 --(선행처리기)--(컴파일)--> 오브젝트 파일2	}  
+      ...					...     }
+```
 
+#### 모듈(module)
+* 프로그램을 구성하는 구성 요소로서 관련된 데이터와 함수를 하나로 묶은 단위를 의미한다.
+* 보통 하나의 소스 파일에 모든 함수를 작성하지 않고 함수의 기능별로 따로 모듈을 구성한다.
+* 이러한 모듈을 합쳐 하나의 파일로 작성하는 방식으로 프로그램을 만들게 된다.
+* 위처럼 프로그램 코드를 기능별로 나눠서 독립된 파일에 저장하여 관리하는 방식을 모듈화 프로그래밍이라고 한다.
 
 
 
