--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -3,6 +3,7 @@
 ### 분할 컴파일
 * 작성된 모듈(module)은 개별적으로 컴파일된 후, 링커에 의해 하나의 실행 파일로 만들어진다.
 * 이렇게 하나의 실행 파일을 만들기 위해서 소스 파일을 여러 개로 나누어 개발하는 방식을 분할 컴파일 방식이라고 한다.
+* 분할 컴파일 방식에서 여러 개의 소스 파일 사이의 상호 참조는 전역 변수와 전역 함수만이 가능하다.
 * 최종적인 실행 파일의 생성을 위해서 접근하는 변수나 호출하는 함수가 어디에 있는지 서로 연결해주는 작업을 링크(link)라고 한다.
 ```
 소스 파일1 --(선행처리기)--(컴파일)--> 오브젝트 파일1	}
@@ -17,6 +18,10 @@
 * 이러한 모듈을 합쳐 하나의 파일로 작성하는 방식으로 프로그램을 만들게 된다.
 * 위처럼 프로그램 코드를 기능별로 나눠서 독립된 파일에 저장하여 관리하는 방식을 모듈화 프로그래밍이라고 한다.
 
+#### extern 키워드
+* 기본적으로 C 컴파일러는 프로그램에 등장하는 전역 변수를 오로지 해당 파일에서만 찾을 수 있으므로, 파일 내에서 외부 파일에 참조하는 전역 변수를 알려주는 extern키워드 를 사용하여 전역 변수가 외부 파일에 존재하는 변수임을 인식하고 컴파일을 진행하게 한다.
+* 외부 파일에서 참조하는 전역 변수는 컴파일러에게 외부 파일에 존재하는 변수라는 사실을 따로 알려줘야 하기 때문에 해당 파일 내에서 해당 키워드를 사용해 다시 한 번 변수를 선언해야 한다.
+* extern 키워드가 붙은 전역 변수는 컴파일된 후, 링크 때가 돼서야 실제로 연결되게 된다.
 
 
 
