--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -19,11 +19,15 @@
 * 위처럼 프로그램 코드를 기능별로 나눠서 독립된 파일에 저장하여 관리하는 방식을 모듈화 프로그래밍이라고 한다.
 
 #### extern 키워드
-* 기본적으로 C 컴파일러는 프로그램에 등장하는 전역 변수를 오로지 해당 파일에서만 찾을 수 있으므로, 파일 내에서 외부 파일에 참조하는 전역 변수를 알려주는 extern키워드 를 사용하여 전역 변수가 외부 파일에 존재하는 변수임을 인식하고 컴파일을 진행하게 한다.
-* 외부 파일에서 참조하는 전역 변수는 컴파일러에게 외부 파일에 존재하는 변수라는 사실을 따로 알려줘야 하기 때문에 해당 파일 내에서 해당 키워드를 사용해 다시 한 번 변수를 선언해야 한다.
-* extern 키워드가 붙은 전역 변수는 컴파일된 후, 링크 때가 돼서야 실제로 연결되게 된다.
+* 기본적으로 C 컴파일러는 프로그램에 등장하는 전역 변수를 오로지 해당 파일에서만 찾을 수 있다.
+* 파일 내에서 외부 파일에 참조하는 전역 변수를 알려주는 extern키워드로서 전역 변수가 외부 파일에 존재하는 변수임을 인식하고 컴파일을 진행하게 된다.	
+
+```cpp
 
 
+
+
+```
 
 
 
