--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -20,7 +20,7 @@
 
 #### extern 키워드
 * 기본적으로 C 컴파일러는 프로그램에 등장하는 전역 변수를 오로지 해당 파일에서만 찾을 수 있다.
-* 파일 내에서 외부 파일에 참조하는 전역 변수를 알려주는 extern키워드로서 전역 변수가 외부 파일에 존재하는 변수임을 인식하고 컴파일을 진행하게 된다.	
+* 파일 내에서 외부 파일에 참조하는 전역 변수를 알려주는 extern키워드로서 해당 파일이 전역변수가 외부 파일에 존재하는 변수임을 인식하고 컴파일을 진행하게 된다.	
 
 ```cpp
 
