--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -23,10 +23,24 @@
 * 파일 내에서 외부 파일에 참조하는 전역 변수를 알려주는 extern키워드로서 키워드를 입력한 전역변수가 외부 파일에 존재하는 변수임을 인식하고 컴파일을 진행하게 된다.	
 
 ```cpp
+/*func.c
+void Increment(void)
+....
 
+int GetNum(void)
+....
+*/
 
+//main.c
+extern void Increment(void);	//컴파일러에게 외부 파일에 존재하는 변수라는 사실을 따로 알려줘야 하기 때문에 키워드를 사용해 다시 한 번 변수 선언
+extern int GetNum(void);
 
-
+int main()
+{
+  printf(...);
+  Increment();	//extern 키워드가 붙은 전역 변수는 컴파일된 후, 링크 때가 돼서야 실제로 연결
+  ...
+}
 ```
 
 
