--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -43,7 +43,9 @@ int main()
 }
 ```
 
-
+#### static 키워드
+* static 키워드는 분할 컴파일 방식에서 변수의 접근 영역을 해당 파일로만 한정되도록 제한한다.
+* 이렇게 선언된 변수는 다른 소스 파일에서 extern 키워드를 사용해 선언하더라도 접근할 수 없는 전역 변수가 된다.
 
 
 
