--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -2,7 +2,7 @@
 ==
 ### 분할 컴파일
 * 작성된 모듈(module)은 개별적으로 컴파일된 후, 링커에 의해 하나의 실행 파일로 만들어진다.
-* 이렇게 하나의 실행 파일을 만들기 위해서 소스 파일을 여러 개로 나누어 개발하는 방식을 분할 컴파일 방식이라고 한다.
+* 이렇게 **하나의 실행 파일을 만들기 위해서 소스 파일을 여러 개로 나누어 개발하는 방식**을 **'분할 컴파일 방식'** 이라고 한다.
 * 분할 컴파일 방식에서 여러 개의 소스 파일 사이의 상호 참조는 전역 변수와 전역 함수만이 가능하다.
 * 최종적인 실행 파일의 생성을 위해서 접근하는 변수나 호출하는 함수가 어디에 있는지 서로 연결해주는 작업을 링크(link)라고 한다.
 ```
