--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -38,6 +38,7 @@
 	* #include "myStdio.h"
 		* 사용자가 직접 작성한 헤더 파일을 포함할 때에는 보통 큰따옴표("")를 사용.
 		* 큰따옴표를 사용하여 파일 이름을 표시하면 선행처리기는 가장 먼저 현재 작업 디렉터리에서 파일 이름에 해당하는 헤더 파일을 찾는다.
+  		* 드라이버 명과 디렉터리 경로를 포함하는 '절대경로(완전경로)'를 명시해서 헤더 파일을 지정할 수 있다.
 		* 하지만 파일 이름에 해당하는 헤더 파일을 찾지 못하면 표준 시스템 디렉터리도 검색한다.
 
 #### #define
