--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -6,13 +6,12 @@
 * RAND_MAX : 생성될 수 있는 난수의 최대값(stdlib.h에 선언되어 있는 상수). 즉 rand함수는 0이상 RAND_MAX 이하의 값을 반환한다.
 * void srand(unsigned int seed) : 발생할 난수의 씨드 값을 지정
 
-
 #### time.h
 * 해당 헤더파일에 선언되어 있는 time이라는 이름의 함수을 제공해준다.
 * time : 컴퓨터의 현재시간과 1970년 1월 1일 이후의 시간적 차를 초단위로 계산해서 반환해준다.
 
-* stdlib헤더파일과 time헤더파일을 이용한 컴퓨터 현재시간을 이용한 
 ```cpp
+//stdlib 헤더파일과 time 헤더파일을 이용하여 컴퓨터 현재시간을 구현
 srand((int)time(NULL));	//현재시간을 이용해서 씨드를 설정
 rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 상수
 ```
