--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -40,7 +40,28 @@
 		* 큰따옴표를 사용하여 파일 이름을 표시하면 선행처리기는 가장 먼저 현재 작업 디렉터리에서 파일 이름에 해당하는 헤더 파일을 찾는다.
 		* 하지만 파일 이름에 해당하는 헤더 파일을 찾지 못하면 표준 시스템 디렉터리도 검색한다.
   		* 드라이버 명과 디렉터리 경로를 포함하는 '절대경로(완전경로)'를 명시해서 헤더 파일을 지정할 수 있다.
-   		* 하지만 절대경로를 지정해서 헤더파일을 선언하면 다른 컴퓨터에서 컴파일 하는 일이 매우 번거로워진다.
+   		
+* 파일경로
+	* 절대경로 
+		* 절대경로 지정 방식은 드라이버 명과 디렉터리 경로를 포함하는 방식으로 헤더파일의 위치를 완벽히 알려줄 수 있다.
+ 		* 어느 곳에서든 경로에 접근할 수 있다는 장점이 존재한다.
+  		* 그러나 경로가 변경되면 경로를 일일히 수정해야한다는 단점이 있다.
+  	* 상대 경로
+	   	* 상대경로 지정 방식은 현재 파일의 위치를 기준으로 연결하려는 파일의 상대적인 경로를 적는 것을 의미한다.
+  		* 주소나 프로젝트 디렉토리 위치가 바뀌어도 내부 구조만 그대로라면 수정없이 그대로 사용할 수 있다는 장점을 가지고 있다.
+  		* 그러나 자기 자신이 기준이기 때문에 자기 자신의 위치가 바뀌는 것에 취약하다는 단점이 있다.
+
+```cpp
+//절대경로
+#include "C:\CPower\MyProject\header.h"	//Windows 상에서 절대경로 지정
+#include "\CPower\MyProject\header.h"	//Linux 상에서 절대경로 지정
+
+//상대경로
+#include "header.h"
+#include "Release\header0.h"
+#include "..\CProg\header1.h"
+#include "..\..\MyHeader\header2.h"
+``` 
 
 #### #define
 * #define 지시자는 함수나 상수를 단순화해주는 매크로를 정의할 때 사용.
