--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -1,6 +1,7 @@
 ## 선행처리와 매크로
 
 ### 선행처리
+<img src="https://github.com/YouAndMeToo3323/TIL/blob/main/C/image/C%EC%96%B8%EC%96%B4_%EC%8B%A4%ED%96%89_%ED%8C%8C%EC%9D%BC_%EC%83%9D%EC%84%B1%ED%95%98%EB%8A%94_%EC%88%9C%EC%84%9C.png?raw=true">
 * 선행처리란 실행 파일을 생성하는 과정에서 소스 파일 내에 존재하는 선행처리 지시문을 처리하는 작업을 의미한다.
 * #문자로 시작하는 선행처리문을 이용하여 소스코드의 일부를 수정한다(단순 치환).
 * 이러한 선행처리 작업은 컴파일하기 전 선행처리기(preprocessor)에 의해 먼저 처리된다.
