--- a/C/learn/컴파일.md
+++ b/C/learn/컴파일.md
@@ -47,7 +47,13 @@ int main()
 * static 키워드는 분할 컴파일 방식에서 변수의 접근 영역을 해당 파일로만 한정되도록 제한한다.
 * 이렇게 선언된 변수는 다른 소스 파일에서 extern 키워드를 사용해 선언하더라도 접근할 수 없는 전역 변수가 된다.
 * 함수에도 static선언을 할 수 있으며 파일 내에서만 접근이 가능하도록 함수를 제한한다.
-
+* 외부 파일에서 호출이 불가능하므로 코드에 대한 안전성을 부여해준다.
+```cpp
+static void MinCnt(void)  //외부 파일에서 호출 불가능
+{
+  cnt--;
+}
+```
 
 
 
