--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -1,5 +1,18 @@
-헤더파일
+헤더파일(header file)
 ===
+* 표준 함수의 원형 및 표준 함수와 관련된 다양한 정보를 가지고 있는 파일을 표준 헤더 파일이라고 한다. 또한, 사용자는 자신만의 사용자 헤더 파일을 자유롭게 만들 수도 있다.
+* 헤더 파일의 확장자는 보통 .h를 사용하며, #include 선행처리 지시자를 사용하여 다른 파일에 포함시킬 수 있다.
+
+### 표준 헤더 파일
+표준 헤더 파일은 그 크기가 상당하지만 크기가 큰 헤더 파일을 포함한다고 프로그램의 크기가 반드시 커지는 것은 아니다.
+헤더 파일의 내용은 실행 파일에 추가되는 내용보다는 컴파일러가 실행 파일을 만드는 데 사용하는 정보가 대부분이다.
+
+##### 표준 헤더 파일에 저장되는 정보
+1. 표준 함수의 원형
+2. 표준 함수의 매크로 상수
+3. 표준 함수의 사용자 정의 타입(구조체, 공용체) 정의
+4. 매크로 함수의 정의
+
 #### stdlib.h
 * ANSI 표준에서 난수를 생성할 때 호출할 수 있는 함수를 제공해준다.
 * int rand(void) : 난수를 생성할 때 사용할 수 있는 함수. 의사 난수(pseudo - random number)를 반환한다.
