--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -16,6 +16,20 @@
 ##### 조거누 컴파일을 활용한 헤더파일 중복삽입 문제의 해결
 [선행처리와 매크로 - #ifndef, #endif](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%84%A0%ED%96%89%EC%B2%98%EB%A6%AC%EC%99%80_%EB%A7%A4%ED%81%AC%EB%A1%9C.md#2ifdef-ifndef)
 
+```cpp
+#ifndef __TEST1_H__  //TEST1의 헤더파일이 포함되어 있지않으면 삽입, 포함되어 있으면 통과
+#define __TEST1_H__  //
+
+typedef struct div  //나눗셈에 대한 구조체
+{
+  int quotient;    //몫
+  int remainder;   //나머지
+}  Div;
+
+#endif 
+```
+
+
 #### stdlib.h
 * ANSI 표준에서 난수를 생성할 때 호출할 수 있는 함수를 제공해준다.
 * int rand(void) : 난수를 생성할 때 사용할 수 있는 함수. 의사 난수(pseudo - random number)를 반환한다.
