--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -17,7 +17,7 @@
 [선행처리와 매크로 - #ifndef, #endif](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%84%A0%ED%96%89%EC%B2%98%EB%A6%AC%EC%99%80_%EB%A7%A4%ED%81%AC%EB%A1%9C.md#2ifdef-ifndef)
 
 ```cpp
-#ifndef __TEST1_H__  //매크로 TEST1이 포함되어 있지않으면 삽입, 포함되어 있으면 통과
+#ifndef __TEST1_H__  //매크로 TEST1이 존재하지 있지않으면 삽입, 존재하면 통과
 #define __TEST1_H__  //매크로 TEST1 선언
 
 typedef struct div  //나눗셈에 대한 구조체
