--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -138,6 +138,19 @@ void ClearLineFromReadBuffer(void)
 {
 	while(getchar() != '\n');//프로그램 사용자가 잘못 입력을 해도 \n을 만나면 나머지를 지워버린다.
 }
+
+//예시
+for (int i = 0; i < 3; i++)
+{
+	printf("저자 : ");
+	fgets(arr[i].name, sizeof(arr[i].name), stdin);
+	printf("제목 : ");
+	fgets(arr[i].Bookname, sizeof(arr[i].Bookname), stdin);
+	printf("페이지 수: ");
+	scanf("%d", &arr[i].page);
+
+	ClearLineFromReadBuffer();//저장된 데이터를 이동
+}
 ```
 ---
 ### 	입출력 이외의 문자열 관련 함수
