--- a/C/learn/구조체_1.md
+++ b/C/learn/구조체_1.md
@@ -72,6 +72,7 @@ int num = 10;
 int* iptr = &num;
 
 //point형 구조체의 포인터 변수 선언 및 초기화
+//struct 구조체이름* 구조체포인터이름;
 struct point pos = {11, 12};	//xpos, ypos를 각각 11, 12로 초기화
 struct point* pptr = &pos;		//포인터 변수 pptr이 구조체 변수 pos를 가리킴
 
