--- a/C/learn/구조체_1.md
+++ b/C/learn/구조체_1.md
@@ -77,10 +77,12 @@ struct point pos = {11, 12};	//xpos, ypos를 각각 11, 12로 초기화
 struct point* pptr = &pos;		//포인터 변수 pptr이 구조체 변수 pos를 가리킴
 
 //point형 포인터 변수 pptr을 이용해서 구조체 변수 pos에 접근
+//(*구조체포인터).멤버변수이름
 (*pptr).xpos = 10;	//pptr이 가리키는 구조체 변수의 멤버 xpos에 10 저장
 (*pptr).ypos = 20;	//pptr이 가리키는 구조체 변수의 멤버 ypos에 20 저장
 
 // *연산(포인터 변수에 대한 접근)과 .연산(구조체에 대한 접근)을 하나의 ->연산으로 대신할 수 있다.
+//구조체포인터 -> 멤버변수이름
 pptr->xpos = 15;	//pptr이 가리키는 구조체 변수의 멤버 xpos에 15 저장
 pptr->ypos = 25;	//pptr이 가리키는 구조체 변수의 멤버 ypos에 25 저장
 ```
