--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -118,6 +118,11 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 ##### 매크로 함수의 단점
 * 원하는 결과를 얻는 정확한 매크로 함수의 구현은 어려우며, 따라서 디버깅 또한 매우 어렵다.
 * 매크로 함수의 크기가 증가하면 증가할수록 사용되는 괄호 또한 매우 많아져서 가독성이 떨어진다.
+
+#### #Pragma
+* 컴파일러에게 말하는 전처리기 명령으로서 #include 나 #define 처럼 전처리기에 의해 컴파일 이전에 처리되지만, 그 명령을 컴파일러에게 전달한다.
+* 사용하는 문법은 컴파일러 마다 다르고 딱히 통일된 것이 없기 때문에 C 언어의 기본 키워드가 아닌 컴파일러에 종속적인 키워드라 한다.
+
  
 #### 조건부 컴파일(conditional compile)
 * 조건부 컴파일을 사용하면 지정한 조건에 따라 코드의 일정 부분을 컴파일할지 안 할지를 지정할 수 있다.
