--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -124,9 +124,12 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 * 사용하는 문법은 컴파일러 마다 다르고 딱히 통일된 것이 없기 때문에 C 언어의 기본 키워드가 아닌 컴파일러에 종속적인 키워드라 한다.
 
 ##### #pragma pack
-
-
-
+* 마이크로소프트 계열의 컴파일러들에만 유효한 문장으로서 구조체의 크기를 1의 배수가 되도록 정렬해준다.
+* 1 외에도 2,4,8,16 등이 올 수 있으며, 더블 워드 경계로 정렬하기 위해서 #pragma pack(4)을 입력하면 된다.
+```cpp
+//#pragma pack(n) 구조체의 크기를 n의 배수로 정렬
+#pragma pack(1)
+```
 
 
 
