--- a/C/learn/선행처리와_매크로.md
+++ b/C/learn/선행처리와_매크로.md
@@ -130,10 +130,30 @@ int num = 120 / SQUARE(2);	// 120 / (2) * (2) = 120, 의도한 값 : 30
 //#pragma pack(n) 구조체의 크기를 n의 배수로 정렬
 #pragma pack(1)
 ```
+##### #pragma once
+* 이 명령을 사용하면 해당 파일을 한번 컴파일 하고 더이상 컴파일 하지 않는다.
+* #ifndef를 이용하는 것 보다 컴파일 시간을 절약할 수 있다.
+* #pragma 관련 키워드들은 컴파일러 종속적이여서 어떤 컴파일러에서는 #pragma once 가 지원이 되지 않을 수도 있다.
+```cpp
+/*test1.h*/
+#pragma once
+struct Point{
+  char arr[2];
+  int i;
+};
 
+/*main.c*/
+#include <stdio.h>
+#include "test1.h"	//구조체 Point 정의
+#include "test1.h"	//#pragma once로 인해 통과
 
-
-
+int main() {
+  struct Point a;
+  a.i = 3;
+  printf("Point 구조체의 a.i : %d \n", a.i);
+  return 0;
+}
+```
 
 #### 조건부 컴파일(conditional compile)
 * 조건부 컴파일을 사용하면 지정한 조건에 따라 코드의 일정 부분을 컴파일할지 안 할지를 지정할 수 있다.
