--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -225,6 +225,32 @@ int strncmp(const char* s1, const char* s2, size_t n);
 //strcmp함수는 참이면 0으로 출력하므로 if문 사용시 !strcmp로 사용(strcmp가 참이면 if는 거짓으로 나와야함).
 if(!strcmp(s1,s2));
 if(!strcmp(s1,s2,3));
+
+//둘 파일간의 문자열이 같은지 비교할 수 있다.
+int comp1, comp2;
+FILE* fp1 = fopen("d1.txt", "rt");
+FILE* fp2 = fopen("d2.txt", "rt");
+while (1)
+{
+	ret1 = fscanf(fp1, "%s", comp1);
+	if (ret1 == EOF)
+		break;
+}
+while (1)
+{
+	ret2 = fscanf(fp2, "%s", comp2);
+	if (ret2 == EOF)
+		break;
+}
+
+if (!strcmp(comp1, comp2))
+{
+	fputs("두 개의 파일은 완전히 일치합니다.\n", stdout);
+}
+else
+{
+	fputs("두 개의 파일은 일치하지 않습니다.\n", stdout);
+}
 ```
 
 #### 그 이외의 변환 함수들(헤더파일 <stdlib.h>에 선언된  함수들)
