--- a/C/learn/포인터.md
+++ b/C/learn/포인터.md
@@ -5,6 +5,7 @@
 #### 포인터 변수
 메모리의 주소 값을 저장하기 위한 변수.<br/>
 ```cpp
+int ptr = 0;
 int* pnum;  //"ptr"이라는 변수를 선언하고, 이 변수가 정수를 가리킬 수 있는 포인터임을 나타낸다.
 
 int*	  //포인터 변수를 선언할 때 사용하는 타입 지정자(int형 포인터)
