--- a/C/learn/링크드리스트.md
+++ b/C/learn/링크드리스트.md
@@ -7,7 +7,13 @@
 * 배열은 프로그램 작성시 그 크기를 미리 정해놓음으로써 최소한 정해놓은 크기만큼 메모리가 항상 존재해야만 한다. 배열은 실행중에는 크기를 늘이거나 줄일 수 없다.
 * 링크드리스트는 '재귀적 정의'와 '포인터'와 '동적할당'을 이용하여 실행중에도 크기를 늘이거나 줄일 수 있도록 메모리 크기에 유연하게 대처할 수 있게 만든 자료구조.
 
+#### 링크드리스트의 장점
+* 자료구조의 크기가 가변적이다(메모리 제한에 유연하다).
+* 자료의 추가와 제거에 걸리는 시간이 일정하다(링크를 연결하거나 끊는 것에 의해 구현된다).
 
+#### 링크드리스트의 단점
+* 임의의 자료에 바로 접근할 수 없다.
+* 임의의 원소에 접근하기 위해서는 링크를 따라가야 하므로 자료의 검색에 시간이 오래 걸릴 수도 있다.
 
 
 
