--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -89,5 +89,6 @@ int* arr = (int*)malloc(sizeof(int)*3);    //길이가 3인 int형 배열 할당
 arr = (int*)realloc(arr, sizeof(int)*5);    //길이가 5인 int형 배열로 확장
 ```
 
-
+#### memcpy함수
+* 메모리의 특정한 부분으로부터 얼마까지의 부분을 다른 메모리 영역으로 복사해주는 함수로서
 
