--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -110,7 +110,11 @@ void* memcpy(void* destination, const void* source, size_t num);
 
 #### memmove함수
 
+```cpp
+#include <string.h>  // C++ 에서는 <cstring>
 
+void* memmove(void* destination, const void* source, size_t num);
+```
 
 
 
