--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -109,6 +109,7 @@ void* memcpy(void* destination, const void* source, size_t num);
 ```
 
 #### memmove함수
+* 메모리 블록을 옮긴다.
 
 ```cpp
 #include <string.h>  // C++ 에서는 <cstring>
