--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -89,7 +89,7 @@ int* arr = (int*)malloc(sizeof(int)*3);    //길이가 3인 int형 배열 할당
 arr = (int*)realloc(arr, sizeof(int)*5);    //길이가 5인 int형 배열로 확장
 ```
 
-#### memcpy함수
+#### memcpy 함수
 * 메모리의 특정한 부분으로부터 얼마까지의 부분을 다른 메모리 영역으로 복사해주는 함수로서 문자열을 복사하는데 사용될 수 있다.
 * 이 함수는 메모리 타입과 상관없이 단순히 이진 데이터를 복사한다.
 * source 의 널 종료 문자(null terminating character) 을 검사하지 않는다. 언제나 정확히 num 바이트 만큼을 복사한다.
@@ -108,7 +108,7 @@ void* memcpy(void* destination, const void* source, size_t num);
 
 ```
 
-#### memmove함수
+#### memmove 함수
 * 메모리 이동 함수로서 source 가 가리키는 곳 부터 num 바이트 만큼 메모리블록을 destination 이 가리키는 곳으로 옮긴다.
 * 이 함수는 메모리 타입과 상관없이 단순히 이진 데이터를 복사한다.
 * 메모리 복사 수행시, 중간에 버퍼를 이용하게 되므로 destination 과 source 의 해당하는 범위가 겹쳐져도 문제는 없다.
@@ -125,6 +125,7 @@ num : 복사할 바이트 수
 void* memmove(void* destination, const void* source, size_t num);
 ```
 
+#### memset 함수
 
 
 
