--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -46,6 +46,21 @@ srand((int)time(NULL));	//현재시간을 이용해서 씨드를 설정
 rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 상수
 ```
 
+#### math.h
+해당 헤더파일에는 수학관련된 함수들을 제공해준다.
+|함수 원형|기능|
+|:-:|:-:|
+|double fabs(double x);|x의 절대값 반환|
+|double ceil(double x);|x보다 작지 않은 최소 크기의 정수 반환|
+|double floor(double x);|x보다 크지 않은 최대 크기의 정수 반환|
+|double exp(double x);|e^x값 반환(e는 오일러 수)|
+|double pow(double x, double y);|x^y값 반환|
+|double log(double x);|log(exp)x값 반환|
+|double log10(double x);|log(10)x값 반환|
+|double sqrt(double x);|(sqrt)x값 반환|
+
+
+
 
 
 
