--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -30,11 +30,6 @@ typedef struct div  //나눗셈에 대한 구조체
 ```
 
 
-#### stdlib.h
-* ANSI 표준에서 난수를 생성할 때 호출할 수 있는 함수를 제공해준다.
-* int rand(void) : 난수를 생성할 때 사용할 수 있는 함수. 의사 난수(pseudo - random number)를 반환한다.
-* RAND_MAX : 생성될 수 있는 난수의 최대값(stdlib.h에 선언되어 있는 상수). 즉 rand함수는 0이상 RAND_MAX 이하의 값을 반환한다.
-* void srand(unsigned int seed) : 발생할 난수의 씨드 값을 지정
 
 #### time.h
 * 해당 헤더파일에 선언되어 있는 time이라는 이름의 함수을 제공해준다.
@@ -47,9 +42,10 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 ```
 
 #### math.h
-해당 헤더파일에는 수학관련된 함수들을 제공해준다.
+* 해당 헤더파일에는 수학관련된 함수들을 제공해준다.
+
 |함수 원형|기능|
-|:-:|:-:|
+|-|-|
 |double fabs(double x);|x의 절대값 반환|
 |double ceil(double x);|x보다 작지 않은 최소 크기의 정수 반환|
 |double floor(double x);|x보다 크지 않은 최대 크기의 정수 반환|
@@ -59,7 +55,22 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |double log10(double x);|log(10)x값 반환|
 |double sqrt(double x);|(sqrt)x값 반환|
 
+##### 사인(sine), 코사인(cosine), 탄젠트(tangent) 관련 함수들
+* 아래 함수들도 math.h에 선언되어 있으며, 각도는 라디안(radian)을 기준으로 계산이 된다.
 
+  
+
+#### stdlib.h
+* ANSI 표준에서 난수를 생성할 때 호출할 수 있는 함수를 제공해준다.
+* int rand(void) : 난수를 생성할 때 사용할 수 있는 함수. 의사 난수(pseudo - random number)를 반환한다.
+* RAND_MAX : 생성될 수 있는 난수의 최대값(stdlib.h에 선언되어 있는 상수). 즉 rand함수는 0이상 RAND_MAX 이하의 값을 반환한다.
+* void srand(unsigned int seed) : 발생할 난수의 씨드 값을 지정
+* 다음 두 함수는 수학관련 함수임에도 불구하고 정수형 연산을 하는 함수이기 때문에 헤더파일 stdlib.h에 선언되어 있다.
+
+|함수 원형|기능|
+|-|-|
+|int abs(int x);|x의 절대값 반환|
+|int labs(long x);|x의 절대값 반환|
 
 
 
