--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -60,7 +60,10 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 
 |함수 원형|기 능|
 |-|-|
-|double cos (double
+|double cos (double x);|x의 삼각(trigonometric) 코사인 값 반환|
+|double sin (double x);|x의 삼각 사인 값 반환|
+|double tan (double x);|x의 삼각 탄젠트 값 반환|
+|double cosh (double x);|x의 쌍곡선(hyperbolic) 코사인 값 반환|
   
 
 #### stdlib.h
