--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -64,7 +64,14 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |double sin (double x);|x의 삼각 사인 값 반환|
 |double tan (double x);|x의 삼각 탄젠트 값 반환|
 |double cosh (double x);|x의 쌍곡선(hyperbolic) 코사인 값 반환|
-  
+|double sinh (double x);|x의 쌍곡선 사인 값 반환|
+|double tanh (double x);|x의 쌍곡선 탄젠트 값 반환|
+|double acos (double x);|x의 삼각(trigonometric) 아크코사인 값 반환|
+|double asin (double x);|x의 삼각 아크사인 값 반환|
+|double atan (double x);|x의 삼각 아크탄젠트 값 반환|
+|double acosh (double x);|x의 쌍곡선(hyperbolic) 아크코사인 값 반환|
+|double asinh (double x);|x의 쌍곡선 아크사인 값 반환|
+|double atanh (double x);|x의 쌍곡선 아크탄젠트 값 반환|
 
 #### stdlib.h
 * ANSI 표준에서 난수를 생성할 때 호출할 수 있는 함수를 제공해준다.
