--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -55,7 +55,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |double log10(double x);|log(10)x값 반환|
 |double sqrt(double x);|(sqrt)x값 반환|
 
-##### 사인(sine), 코사인(cosine), 탄젠트(tangent) 관련 함수들
+#### 사인(sine), 코사인(cosine), 탄젠트(tangent) 관련 함수들
 * 아래 함수들도 math.h에 선언되어 있으며, 각도는 라디안(radian)을 기준으로 계산이 된다.
 
 |함수 원형|기 능|
